update state machine 3

--- a/datastructr&algorithm/11状态机动态规划03.md
+++ b/datastructr&algorithm/11状态机动态规划03.md
@@ -167,3 +167,91 @@ class Solution {
 输出：6
 ```
 
+### 状态表示数组和状态转移方程
+
+这道题其实和在[这种动态规划你见过吗——状态机动态规划之股票问题(上)](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247485286&idx=1&sn=3d0a6a1c2e62ba770d8427c6dd732973&chksm=cf0c9b6ff87b1279d46c775001fd77b8e1437d4001a6c8a1ca8db090eadb4174af1058a1aadf&token=1092368950&lang=zh_CN#rd)当中的第二道题很相似，唯一的区别就是这里加上了手续费，其余部分是一模一样。
+
+现在我们来分析一下如何进行状态的转移：
+
+- `dp[i][0]`的状态如何从第`i-1`的状态转移过来：
+
+  - 如果第`i-1`个状态是手中不存在股票，即`dp[i-1][0]`，那么第`i`个状态也没有股票，那么直接是`dp[i][0] = dp[i - 1][0]`，因为没有进行交易。
+  - 如果第`i-1`个状态手中存在股票，即`dp[i-1][1]`，那么如果想在第`i`个状态没有股票，那么就需要将股票卖出，那么收益就为`dp[i-1][1] + prices[i]`，即`dp[i][0] = dp[i-1][1] + prices[i]`，但是在这个题目当中会有手续费，我们在卖出的时候需要缴纳手续费，那么我们的收益就变成`dp[i][0] = dp[i-1][1] + prices[i] -fee`。
+  - 综合上面的两种转移方式可以得到下面的转移方程：
+
+  $$
+  dp[i][0] = max(dp[i - 1][0], dp[i - 1][1] + prices[i] -fee)
+  $$
+
+- `dp[i][1]`的状态如何进行转移：
+
+  - 如果第`i-1`个状态是手中不存在股票，即`dp[i-1][0]`，那么我们就需要从第`i-1`个手中不存在股票的状态进行买入，那么`dp[i][0] = dp[i - 1][0] - prices[i]`。
+  - 如果第`i-1`个状态手中存在股票，即`dp[i-1][1]`，而第`i`个状态有股票，因此不需要进行交易，即`dp[i][1]=dp[i - 1][1]`。
+  - 综合上面的两种转移方式可以得到下面的转移方程：
+
+  $$
+  dp[i][1] = max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
+  $$
+
+- 综合上面的两个状态：
+
+$$
+\begin{cases}dp[i][0] = max(dp[i - 1][0], dp[i - 1][1] + prices[i])\\
+            dp[i][1] = max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
+            \end{cases}
+$$
+
+### 代码
+
+```java
+class Solution {
+  public int maxProfit(int[] prices, int fee) {
+    int[][] dp = new int[prices.length][2];
+    // dp[i][0] 表示不持有股票
+    // dp[i][1] 表示持有股票
+    dp[0][1] = -prices[0];
+    for (int i = 1; i < prices.length; ++i) {
+      dp[i][0] = Math.max(dp[i - 1][0], dp[i - 1][1] + prices[i] - fee);
+      dp[i][1] = Math.max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
+    }
+    return dp[prices.length - 1][0];
+  }
+}
+```
+
+### 数组优化——滚动数组
+
+```java
+class Solution {
+  public int maxProfit(int[] prices, int fee) {
+    int[][] dp = new int[2][2];
+    // dp[i][0] 表示不持有股票
+    // dp[i][1] 表示持有股票
+    dp[0][1] = -prices[0];
+    for (int i = 1; i < prices.length; ++i) {
+      dp[i & 1][0] = Math.max(dp[(i - 1) & 1][0], dp[(i - 1) & 1][1] + prices[i] - fee);
+      dp[i & 1][1] = Math.max(dp[(i - 1) & 1][1], dp[(i - 1) & 1][0] - prices[i]);
+    }
+    return dp[(prices.length - 1) & 1][0];
+  }
+}
+```
+
+### 再优化
+
+```java
+class Solution {
+  public int maxProfit(int[] prices, int fee) {
+    int[] dp = new int[2];
+    // dp[0] 表示不持有股票
+    // dp[1] 表示持有股票
+    dp[1] = -prices[0];
+    for (int i = 1; i < prices.length; ++i) {
+      dp[0] = Math.max(dp[0], dp[1] + prices[i] - fee);
+      dp[1] = Math.max(dp[1], dp[0] - prices[i]);
+    }
+    return dp[0];
+  }
+}
+```
+
