update state machine 3

--- a/datastructr&algorithm/11状态机动态规划03.md
+++ b/datastructr&algorithm/11状态机动态规划03.md
@@ -66,6 +66,13 @@
 
 根据上面的分析我们可以知道，在遍历到第一支股票的时候如果持有股票的话就需要进行买入，那么买入的状态`dp[0][1]`的值就等于`-prices[0]`，卖出的状态收益为0，冷静期的状态也等于0。根据状态转移方程第`i`行的数据以来第`i-1`行，因此从前往后遍历就行。
 
+### 最大收益
+
+根据上文当中我们设置的状态，我们能够获取的最大的收益为`dp[prices.length - 1][2], dp[prices.length - 1][3]`两者当中的一个，因为最终我们要想收益最大手中肯定没有股票，而没有股票的状态有上述提到的两个状态。
+$$
+max(dp[prices.length - 1][2], dp[prices.length - 1][3])
+$$
+
 ### 代码
 
 ```java
