update state machine 3

--- a/datastructr&algorithm/11状态机动态规划03.md
+++ b/datastructr&algorithm/11状态机动态规划03.md
@@ -203,7 +203,7 @@ class Solution {
 - 综合上面的两个状态：
 
 $$
-\begin{cases}dp[i][0] = max(dp[i - 1][0], dp[i - 1][1] + prices[i])\\
+\begin{cases}dp[i][0] = max(dp[i - 1][0], dp[i - 1][1] + prices[i] -fee)\\
             dp[i][1] = max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
             \end{cases}
 $$
