--- a/datastructr&algorithm/11状态机动态规划03.md
+++ b/datastructr&algorithm/11状态机动态规划03.md
@@ -262,7 +262,7 @@ class Solution {
 }
 ```
 
-上面的代码优化和[这种动态规划你见过吗——状态机动态规划之股票问题(中)](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247485500&idx=1&sn=f9283ccc6e0c909641eadb9c761f6d1b&chksm=cf0c9435f87b1d23f1361bdd62946d3e6bb79b1415718fd15150bd47215b5ab490510bb51967&token=1092368950&lang=zh_CN#rd)当中的优化原理是一样的。在下面的代码当中，左边的`dp`相当于二维数组当中的`dp[i][0]，dp[i][1]`，右边的状态相当于`dp[i - 1][0]，dp[i - 1][1]`。
+上面的代码优化和[这种动态规划你见过吗——状态机动态规划之股票问题(中)](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247485500&idx=1&sn=f9283ccc6e0c909641eadb9c761f6d1b&chksm=cf0c9435f87b1d23f1361bdd62946d3e6bb79b1415718fd15150bd47215b5ab490510bb51967&token=1092368950&lang=zh_CN#rd)当中的优化原理是一样的。在下面的代码当中，左边的单行数组`dp[0]和dp[1]`相当于二维数组当中的`dp[i][0]，dp[i][1]`，右边的单行数组`dp[0]和dp[1]`相当于二维数组的`dp[i - 1][0]和dp[i - 1][1]`。
 
 ```java
 dp[0] = Math.max(dp[0], dp[1] + prices[i] - fee);
@@ -270,3 +270,10 @@ dp[1] = Math.max(dp[1], dp[0] - prices[i]);
 ```
 
 但是我们会发现上面代码的第二行会依赖`dp[0]`，这个`dp[0]`是第`i-1`行的状态，但是`dp[0]`在第一行已经发生了更新，也就是说`dp[0]`已经更新到了第`i`行的状态。
+
+- 如果`dp[0]`取的是`dp[0]`，也就是说`dp[0] > dp[1] + prices[i] - fee `，那么`dp[0]`还是上一行的状态，并不影响`dp[1]`的结果。
+- 如果`dp[0]`取的是`dp[1] + prices[i] - fee`，但是`dp[1]`取的是上一行的`dp[1]`那么对结果也没有什么影响。
+- 如果`dp[0]`取的是`dp[1] + prices[i] - fee`而且`dp[1]`取的是`dp[0] - prices[i]`，这一加一减其实没有意义，还单纯的需要缴纳手续费，因此这个状态不会被最终的结果取到，因此对最终的结果没有影响。
+
+## 总结
+
