update state machine 3

--- a/datastructr&algorithm/11状态机动态规划03.md
+++ b/datastructr&algorithm/11状态机动态规划03.md
@@ -269,11 +269,11 @@ dp[0] = Math.max(dp[0], dp[1] + prices[i] - fee);
 dp[1] = Math.max(dp[1], dp[0] - prices[i]);
 ```
 
-但是我们会发现上面代码的第二行会依赖`dp[0]`，这个`dp[0]`是第`i-1`行的状态，但是`dp[0]`在第一行已经发生了更新，也就是说`dp[0]`已经更新到了第`i`行的状态。
+但是我们会发现上面代码的第二行会依赖`dp[0]`，这个`dp[0]`是第`i-1`行的状态，但是`dp[0]`在第一行已经发生了更新，也就是说`dp[0]`已经更新到了第`i`行的状态，那么为什么结果是对的呢？我们可以根据下面三条规则进行分析：
 
 - 如果`dp[0]`取的是`dp[0]`，也就是说`dp[0] > dp[1] + prices[i] - fee `，那么`dp[0]`还是上一行的状态，并不影响`dp[1]`的结果。
 - 如果`dp[0]`取的是`dp[1] + prices[i] - fee`，但是`dp[1]`取的是上一行的`dp[1]`那么对结果也没有什么影响。
-- 如果`dp[0]`取的是`dp[1] + prices[i] - fee`而且`dp[1]`取的是`dp[0] - prices[i]`，这一加一减其实没有意义，还单纯的需要缴纳手续费，因此这个状态不会被最终的结果取到，因此对最终的结果没有影响。
+- 如果`dp[0]`取的是`dp[1] + prices[i] - fee`而且`dp[1]`取的是`dp[0] - prices[i]`，这一加一减其实没有意义，还单纯的需要缴纳手续费，最终`dp[0] - prices[i] = dp[1] + prices[i] - fee - prices[i] =  dp[1] - fee < dp[1] `，因此这个状态不会被最终的结果取到，被取到的状态肯定都是第`i-1`行的`dp[1]`，也就是说这个状态又会转移到第一条当中，因此对最终的结果没有影响。
 
 ## 总结
 
