update state machine 3

--- a/datastructr&algorithm/11状态机动态规划03.md
+++ b/datastructr&algorithm/11状态机动态规划03.md
@@ -277,3 +277,15 @@ dp[1] = Math.max(dp[1], dp[0] - prices[i]);
 
 ## 总结
 
+在本篇文章当中主要跟大家介绍了最后两道股票问题，第一道题的状态转移还是比较复杂的，可能需要大家仔细进行体会，才能理解。本文当中的第二道题目跟之前的题目非常像，只需要在收益上减去手续费即可。相信看完这三篇文章，昨晚这六道题目你对状态机动态规划已经很了解了。
+
+---
+
+更多精彩内容合集可访问项目：<https://github.com/Chang-LeHung/CSCore>
+
+关注公众号：**一无是处的研究僧**，了解更多计算机（Java、Python、计算机系统基础、算法与数据结构）知识。
+
+![](https://img2022.cnblogs.com/blog/2519003/202207/2519003-20220703200459566-1837431658.jpg)
+
+
+
