update state machine 3

--- a/datastructr&algorithm/11状态机动态规划03.md
+++ b/datastructr&algorithm/11状态机动态规划03.md
@@ -277,7 +277,7 @@ dp[1] = Math.max(dp[1], dp[0] - prices[i]);
 
 ## 总结
 
-在本篇文章当中主要跟大家介绍了最后两道股票问题，第一道题的状态转移还是比较复杂的，可能需要大家仔细进行体会，才能理解。本文当中的第二道题目跟之前的题目非常像，只需要在收益上减去手续费即可。相信看完这三篇文章，昨晚这六道题目你对状态机动态规划已经很了解了。
+在本篇文章当中主要跟大家介绍了最后两道股票问题，第一道题的状态转移还是比较复杂的，可能需要大家仔细进行体会，才能理解，尤其是关于冷冻期的状态的转换可能比较绕。本文当中的第二道题目跟之前的题目非常像，只需要在收益上减去手续费即可。相信看完这三篇文章，做完这六道题目你对**状态机动态规划**的基本原理已经很了解了，它和传统的动态规划最不一样的就是有很多复杂的状态之间的转换，而且一般的动态规划的题目都是多重循环，但是在**状态机动态规划**当中是单循环。
 
 ---
 
