--- a/datastructr&algorithm/11状态机动态规划03.md
+++ b/datastructr&algorithm/11状态机动态规划03.md
@@ -42,8 +42,8 @@
 - `dp[i][1]`，表示在遍历到第`i`支股票的时候手中含有股票，这个情况可以由**三**种情况转移过来：
 
   - 在遍历到第`i-1`支股票的时候手中已经存在股票了，这个时候只需要保持状态，那么在第`i`支股票的时候的收益和第`i-1`支股票的收益是相等的，即`dp[i][1] = dp[i - 1][1]`。
-  - 第二种情况就是在遍历到第`i-1`支股票的时候手中不存在股票，那么这个时候要想手中存在股票就需要进行买入了，那么久需要花费`prices[i]`，那么在遍历到第`i`支股票的时候收益等于`dp[i][1] = dp[i - 1][0] - prices[i]`。
-  - 第三种情况是前一天是处于冷冻期（这里所谈到的冷冻期并不只是前2天卖出，导致的前一天的冷冻期，还有可能是更早之前卖出的，然后保持它的状态），那么现在是可以进行买入的，即`dp[i][1] = dp[i - 1][3]`，其中`dp[i][3]`表示遍历到第`i`支股票的时候处于冷冻期的收益。
+  - 第二种情况就是在遍历到第`i-1`支股票的时候手中不存在股票，那么这个时候要想手中存在股票就需要进行买入了，那么就需要花费`prices[i]`，那么在遍历到第`i`支股票的时候收益等于`dp[i][1] = dp[i - 1][0] - prices[i]`。
+  - 第三种情况是前一天是处于冷冻期（这里所谈到的冷冻期并不只是前2天卖出，导致的前一天的冷冻期，还有可能是更早之前卖出的，然后保持它的状态，相当于是冷冻期的续期，只不过在续期当中是可以进行买股票的），那么现在是可以进行买入的，即`dp[i][1] = dp[i - 1][3] - prices[i]`，其中`dp[i][3]`表示遍历到第`i`支股票的时候处于冷冻期的收益。
   - 综合以上三种情况：
 
   $$
@@ -64,7 +64,7 @@
 
 ### 数组的初始化和遍历顺序
 
-根据上面的分析我们可以知道，在遍历到第一支股票的时候如果持有股票的话就需要进行买入，那么买入的状态`dp[0][1]`的值就等于`-prices[0]`，卖出的状态收益为0，冷静期的状态也等于0。根据状态转移方程第`i`行的数据以来第`i-1`行，因此从前往后遍历就行。
+根据上面的分析我们可以知道，在遍历到第一支股票的时候如果持有股票的话就需要进行买入，那么买入的状态`dp[0][1]`的值就等于`-prices[0]`，卖出的状态收益为0，冷冻期的状态也等于0。根据状态转移方程第`i`行的数据依赖第`i-1`行，因此从前往后遍历就行。
 
 ### 最大收益
 
@@ -273,7 +273,7 @@ dp[1] = Math.max(dp[1], dp[0] - prices[i]);
 
 - 如果`dp[0]`取的是`dp[0]`，也就是说`dp[0] > dp[1] + prices[i] - fee `，那么`dp[0]`还是上一行的状态，并不影响`dp[1]`的结果。
 - 如果`dp[0]`取的是`dp[1] + prices[i] - fee`，但是`dp[1]`取的是上一行的`dp[1]`那么对结果也没有什么影响。
-- 如果`dp[0]`取的是`dp[1] + prices[i] - fee`而且`dp[1]`取的是`dp[0] - prices[i]`，这一加一减其实没有意义，还单纯的需要缴纳手续费，最终`dp[0] - prices[i] = dp[1] + prices[i] - fee - prices[i] =  dp[1] - fee < dp[1] `，因此这个状态不会被最终的结果取到，被取到的状态肯定都是第`i-1`行的`dp[1]`，也就是说这个状态又会转移到第一条当中，因此对最终的结果没有影响。
+- 如果`dp[0]`取的是`dp[1] + prices[i] - fee`而且`dp[1]`取的是`dp[0] - prices[i]`，那么就有影响了，但是这一加一减其实没有意义，还单纯的需要缴纳手续费，最终`dp[0] - prices[i] = dp[1] + prices[i] - fee - prices[i] =  dp[1] - fee < dp[1] `，因此这个状态不会被最终的结果取到，被取到的状态肯定都是第`i-1`行的`dp[1]`（因为`dp[1]`更大），也就是说这个状态又会转移到第二条当中，因此对最终的结果没有影响。
 
 ## 总结
 
