update state machine 3

--- a/datastructr&algorithm/11状态机动态规划03.md
+++ b/datastructr&algorithm/11状态机动态规划03.md
@@ -96,7 +96,7 @@ class Solution {
 }
 ```
 
-因为`dp[i][0]`始终等于0，所以将将所由含`dp[i][0]`的地方都可以删除，因此下面的代码也是正确的。
+因为`dp[i][0]`始终等于0，所以将所有含`dp[i][0]`的地方都可以删除，因此下面的代码也是正确的。
 
 ```java
 class Solution {
