update balance exchange

--- a/datastructr&algorithm/13零钱兑换.md
+++ b/datastructr&algorithm/13零钱兑换.md
@@ -2,4 +2,35 @@
 
 ## 前言
 
-在本篇文章当中主要通过介绍两个算法题，从最基本的问题开始深入浅出零钱兑换问题，帮助大家从动态规划的本源深入理解问题当中的原理，并且学会自己分析问题。
+在本篇文章当中主要通过介绍两个算法题，从最基本的问题开始深入浅出零钱兑换问题，帮助大家从动态规划的本源深入理解问题当中的原理，并且学会自己分析问题，再也不怕类似于背包问题的算法题了。
+
+## [零钱兑换](https://leetcode.cn/problems/coin-change/)
+
+### 题目
+
+>给你一个整数数组 coins ，表示不同面额的硬币；以及一个整数 amount ，表示总金额。
+>
+>计算并返回可以凑成总金额所需的 最少的硬币个数 。如果没有任何一种硬币组合能组成总金额，返回 -1 。
+>
+>你可以认为每种硬币的数量是无限的。
+
+### 示例
+
+示例1
+
+```
+输入：coins = [1, 2, 5], amount = 11
+输出：3 
+解释：11 = 5 + 5 + 1
+```
+
+示例2
+
+```
+输入：coins = [2], amount = 3
+输出：-1
+```
+
+### 状态表示喝状态转移方程
+
+在背包问题当中通常都是用一个二维数组表示数据的状态，
