update balance exchange

--- a/datastructr&algorithm/13零钱兑换.md
+++ b/datastructr&algorithm/13零钱兑换.md
@@ -51,5 +51,25 @@
 在确定了状态表示的数组之后，现在我们就需要分析出动态转移方程了，在这个问题当中对于每一种面额的硬币我们都有两种选择：**选和不选**，但是在这个问题当中题目已经说明了对于每一种货币都可以认为是无限的，如果我们不选择，那这种情况比较简单，但是如果选择了这种情况就比较复杂了：
 
 - 不选，这种情况比较简单，比如对于`dp[i][j]`，如果第`i`种面额的货币不选择，那么说明只使用前`i - 1`种面额的货币，那么`dp[i][j] = dp[i - 1][j]`，也就是说明如果使用前`i`种面额的货币去表示总额为`j`，但是不选择第`i`种面额的货币，就相当于使用前`i-1`种货币去表示`j`，那么需要的货币个数跟使用前`i-1`种货币去表示`j`需要的货币数目是相等的。
+- 选，这种情况看起来就比较复杂了，因为我们需要确定是选一次，还是选两次，......，还是选N次，但是其实仔细思考一下我们可以使用一个类似递归的形式去解决这个问题，如果选择那么`dp[i][j] = dp[i][j - coins[i]] + 1`，我们仔细分析一下这个公式，相当于在总金额等于`j`的情况下先使用一次第`i`个面额的硬币，但是因为我们的硬币是无限的，现在我们还是可以选择第`i`个硬币，相当于总金额等于`j - coins[i]`而且可以使用前`i`个硬币的情况下，需要的最少的硬币个数，这就解决了是选一次还是选N次的问题了，而在上面的公式当中加一的原因是使用了一次第`i`种硬币。
 
-如果你还不懂**完全背包**，你可以先阅读这篇文章[完全背包](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484544&idx=1&sn=c4de17583010430fa519ecd1703bedea&chksm=cf0c9889f87b119fe5621bacf417b163020dcd8a7c0ed63df94de20ba67ae742b4d86e22ae16&token=883596793&lang=zh_CN#rd)。
+很显然我们需要从上面两种情况当中选择需要的硬币最少的一种方法，因此综合上面的结果又如下的动态转移方程：
+$$
+dp[i][j] = min(dp[i - 1][j], dp[i][j - coins[i]] + 1)
+$$
+其实上面这个问题的分析过程跟**完全背包**可以说是一模一样，如果你对**完全背包**感兴趣，你可以阅读这篇文章[完全背包](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484544&idx=1&sn=c4de17583010430fa519ecd1703bedea&chksm=cf0c9889f87b119fe5621bacf417b163020dcd8a7c0ed63df94de20ba67ae742b4d86e22ae16&token=883596793&lang=zh_CN#rd)。
+
+### 初始化状态数组
+
+上面的问题分析过程当中，我们已经分析出来了动态转移方程，这个过程和**完全背包**非常相似，但是这个问题比完全背包还稍微复杂一点，因为不一定能够寻找到这样一种组合凑成的总金额等于题目当中规定的数目。我们用`-1`表示找不到这样一种组合能够表示。
+
+- 在正式初始化之前先将`dp`数组第一行当中的数据全部初始化为-1。
+- 初始化第一行代码如下：
+
+```java
+for (int i = 0; i * coins[0] <= amount; i++) {
+    dp[0][i * coins[0]] = i;
+}
+```
+
+`dp`数组的第一行表示只使用第一种面额的硬币，因此只有第一种硬币面额的整数倍总金额才能使用第一种硬币进行表示。
