update balance exchange

--- a/datastructr&algorithm/13零钱兑换.md
+++ b/datastructr&algorithm/13零钱兑换.md
@@ -74,3 +74,14 @@ for (int i = 0; i * coins[0] <= amount; i++) {
 
 `dp`数组的第一行表示只使用第一种面额的硬币，因此只有第一种硬币面额的整数倍总金额才能使用第一种硬币进行表示，而且对应的硬币个数等于$\frac{amout}{coins[0]}$。
 
+- 再看状态转移数组：
+
+  - 如果`dp[i][j - coins[i]] == -1`，那么就不能通过选择第`i`种硬币进行表示，在这种情况下，我们只能通过选择前`i-1`一种货币进行表示，即`dp[i][j] = dp[i - 1][j]`。可你你会有疑问，如果也不能使用前`i-1`种物品进行表示呢？没关系，如果不能表示那么`dp[i - 1][j] == -1`，那么赋值之后`dp[i][j]`也等于-1，也是不能表示的。
+  - 如果`dp[i][j - coins[i]]`不等于-1，但是`dp[i - 1][j]`等于-1，那么`dp[i][j] = dp[i][j - coins[i]] + 1`。
+  - 如果两者都不等于-1，那么我们就有如下的状态转移公式了：
+
+  $$
+  dp[i][j] = min(dp[i - 1][j], dp[i][j - coins[i]] + 1)
+  $$
+
+  
