update balance exchange

--- a/datastructr&algorithm/13零钱兑换.md
+++ b/datastructr&algorithm/13零钱兑换.md
@@ -59,7 +59,7 @@ dp[i][j] = min(dp[i - 1][j], dp[i][j - coins[i]] + 1)
 $$
 其实上面这个问题的分析过程跟**完全背包**可以说是一模一样，如果你对**完全背包**感兴趣，你可以阅读这篇文章[完全背包](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484544&idx=1&sn=c4de17583010430fa519ecd1703bedea&chksm=cf0c9889f87b119fe5621bacf417b163020dcd8a7c0ed63df94de20ba67ae742b4d86e22ae16&token=883596793&lang=zh_CN#rd)。
 
-### 初始化状态数组
+#### 初始化状态数组
 
 上面的问题分析过程当中，我们已经分析出来了动态转移方程，这个过程和**完全背包**非常相似，但是这个问题比完全背包还稍微复杂一点，因为不一定能够寻找到这样一种组合凑成的总金额等于题目当中规定的数目。我们用`-1`表示找不到这样一种组合能够表示。
 
@@ -74,14 +74,45 @@ for (int i = 0; i * coins[0] <= amount; i++) {
 
 `dp`数组的第一行表示只使用第一种面额的硬币，因此只有第一种硬币面额的整数倍总金额才能使用第一种硬币进行表示，而且对应的硬币个数等于$\frac{amout}{coins[0]}$。
 
-- 再看状态转移数组：
+#### 再看状态转移数组：
 
-  - 如果`dp[i][j - coins[i]] == -1`，那么就不能通过选择第`i`种硬币进行表示，在这种情况下，我们只能通过选择前`i-1`一种货币进行表示，即`dp[i][j] = dp[i - 1][j]`。可你你会有疑问，如果也不能使用前`i-1`种物品进行表示呢？没关系，如果不能表示那么`dp[i - 1][j] == -1`，那么赋值之后`dp[i][j]`也等于-1，也是不能表示的。
-  - 如果`dp[i][j - coins[i]]`不等于-1，但是`dp[i - 1][j]`等于-1，那么`dp[i][j] = dp[i][j - coins[i]] + 1`。
-  - 如果两者都不等于-1，那么我们就有如下的状态转移公式了：
+- 如果`dp[i][j - coins[i]] == -1`，那么就不能通过选择第`i`种硬币进行表示，在这种情况下，我们只能通过选择前`i-1`一种货币进行表示，即`dp[i][j] = dp[i - 1][j]`。可你你会有疑问，如果也不能使用前`i-1`种物品进行表示呢？没关系，如果不能表示那么`dp[i - 1][j] == -1`，那么赋值之后`dp[i][j]`也等于-1，也是不能表示的。
+- 如果`dp[i][j - coins[i]]`不等于-1，但是`dp[i - 1][j]`等于-1，那么`dp[i][j] = dp[i][j - coins[i]] + 1`。
+- 如果两者都不等于-1，那么我们就有如下的状态转移公式了：
 
-  $$
-  dp[i][j] = min(dp[i - 1][j], dp[i][j - coins[i]] + 1)
-  $$
+$$
+dp[i][j] = min(dp[i - 1][j], dp[i][j - coins[i]] + 1)
+$$
 
-  
+#### 代码
+
+```java
+class Solution {
+  public int coinChange(int[] coins, int amount) {
+    int[][] dp = new int[coins.length][amount + 1];
+    Arrays.fill(dp[0], -1);
+    for (int i = 0; i * coins[0] <= amount; i++) {
+      dp[0][i * coins[0]] = i;
+    }
+    for (int i = 1; i < coins.length; i++) {
+      for (int j = 0; j <= amount; j++) {
+        // 如果要使用对应的硬币 
+        // 总金额数目肯定要大于硬币的面额
+        if (j >= coins[i]) {
+          if (dp[i][j - coins[i]] == -1)
+            dp[i][j] = dp[i - 1][j];
+          else if (dp[i - 1][j] == -1)
+            dp[i][j] = dp[i][j - coins[i]] + 1;
+          else
+            dp[i][j] = Math.min(dp[i - 1][j], dp[i][j - coins[i]] + 1);
+        } else {
+          // 否则只能使用前 i-1 种硬币
+          dp[i][j] = dp[i - 1][j];
+        }
+      }
+    }
+    return dp[coins.length - 1][amount];
+  }
+}
+```
+
