--- a/datastructr&algorithm/13零钱兑换.md
+++ b/datastructr&algorithm/13零钱兑换.md
@@ -116,3 +116,47 @@ class Solution {
 }
 ```
 
+#### 单行数组优化
+
+```java
+class Solution {
+  public int coinChange(int[] coins, int amount) {
+    int[] dp = new int[amount + 1];
+    Arrays.fill(dp, -1);
+    dp[0] = 0;
+    for (int i = 0; i < coins.length; i++) {
+      for (int j = coins[i]; j <= amount; j++)  {
+        if (dp[j - coins[i]] != -1) {
+          if (dp[j] == -1) {
+            dp[j] = dp[j - coins[i]] + 1;
+          }else
+            dp[j] = Math.min(dp[j], dp[j - coins[i]] + 1);
+        }
+      }
+    }
+    return dp[amount];
+  }
+}
+```
+
+#### 另一种角度思考问题
+
+```java
+class Solution {
+  public int coinChange(int[] coins, int amount) {
+    int max = amount + 1;
+    int[] dp = new int[amount + 1];
+    Arrays.fill(dp, max);
+    dp[0] = 0;
+    for (int i = 1; i <= amount; i++) {
+      for (int j = 0; j < coins.length; j++) {
+        if (coins[j] <= i) {
+          dp[i] = Math.min(dp[i], dp[i - coins[j]] + 1);
+        }
+      }
+    }
+    return dp[amount] > amount ? -1 : dp[amount];
+  }
+}
+```
+
