--- a/datastructr&algorithm/13零钱兑换.md
+++ b/datastructr&algorithm/13零钱兑换.md
@@ -141,7 +141,7 @@ class Solution {
 
 <img src="../images/dsal/dp/01-dp32.png" alt="01-dp01" style="zoom:100%;" />
 
-根据动态转移方程，我们可以得到`dp`数组当中数据之间的依赖关系，他们的关系如上图所示，`dp[i][j]`依赖的数据为它上一行同列的位置，和第`i`行前面的某些数据，事实上我们可以使用单行数组去进行实现，当我们遍历到单行数组第`j`的时候，第`j`个数据还是上一行的状态，但是单行数组的下标从0到`j-1`的位置数据的状态已经从上一行更新了，这些数据的状态相当于二维数组的`dp[i]`这一行的状态，而这正好可以满足动态转移方程的需求，这里你可以结合代码、文字和图片进行理解，理解效果会更加好一点。
+根据动态转移方程，我们可以得到`dp`数组当中数据之间的依赖关系，他们的关系如上图所示，`dp[i][j]`依赖的数据为它上一行同列的位置，和第`i`行前面的某些数据，事实上我们可以使用单行数组去进行实现，我们使用的循环还是一样的，但是使用的数组有所变化，从之前的二维数组变成一维数组。当我们遍历到单行数组第`j`个数据的时候，第`j`个数据还是上一行的状态，但是单行数组的下标从0到`j-1`的位置数据的状态已经从上一行更新了，这些数据的状态相当于二维数组的`dp[i]`这一行的状态，而这正好可以满足动态转移方程的需求，因为在动态转移方程当中，`dp[i][j]`依赖的数据全部符合条件，单行数组当中的下标为`j`数据等于`dp[i][j]`，单行数组下标为`x`的数据等于`dp[i][x]`，其中$0 \le x \le j$，这里你可以结合代码、文字和图片进行理解，理解效果会更加好一点。
 
 <img src="../images/dsal/dp/01-dp31.png" alt="01-dp01" style="zoom:100%;" />
 
