update balance exchange

--- a/datastructr&algorithm/13零钱兑换.md
+++ b/datastructr&algorithm/13零钱兑换.md
@@ -118,6 +118,12 @@ class Solution {
 
 #### 单行数组优化
 
+<img src="../images/dsal/dp/01-dp32.png" alt="01-dp01" style="zoom:100%;" />
+
+根据动态转移方程，我们可以得到`dp`数组当中数据之间的依赖关系，他们的关系如上图所示，`dp[i][j]`依赖的数据为它上一行同列的位置，和第`i`行前面的某些数据，事实上我们可以使用单行数组去进行实现，我们使用的循环还是一样的，但是使用的数组有所变化，从之前的二维数组变成一维数组。当我们遍历到单行数组第`j`个数据的时候，第`j`个数据还是上一行的状态，但是单行数组的下标从0到`j-1`的位置数据的状态已经从上一行更新了，这些数据的状态相当于二维数组的`dp[i]`这一行的状态，而这正好可以满足动态转移方程的需求，因为在动态转移方程当中，`dp[i-1][j]`依赖的数据全部符合条件，单行数组当中的下标为`j`数据等于`dp[i][j]`，单行数组下标为`x`的数据等于`dp[i][x]`，其中$0 \le x \le j$，这里你可以结合代码、文字和图片进行理解，理解效果会更加好一点。
+
+<img src="../images/dsal/dp/01-dp31.png" alt="01-dp01" style="zoom:100%;" />
+
 ```java
 class Solution {
   public int coinChange(int[] coins, int amount) {
@@ -139,29 +145,27 @@ class Solution {
 }
 ```
 
-<img src="../images/dsal/dp/01-dp32.png" alt="01-dp01" style="zoom:100%;" />
-
-根据动态转移方程，我们可以得到`dp`数组当中数据之间的依赖关系，他们的关系如上图所示，`dp[i][j]`依赖的数据为它上一行同列的位置，和第`i`行前面的某些数据，事实上我们可以使用单行数组去进行实现，我们使用的循环还是一样的，但是使用的数组有所变化，从之前的二维数组变成一维数组。当我们遍历到单行数组第`j`个数据的时候，第`j`个数据还是上一行的状态，但是单行数组的下标从0到`j-1`的位置数据的状态已经从上一行更新了，这些数据的状态相当于二维数组的`dp[i]`这一行的状态，而这正好可以满足动态转移方程的需求，因为在动态转移方程当中，`dp[i][j]`依赖的数据全部符合条件，单行数组当中的下标为`j`数据等于`dp[i][j]`，单行数组下标为`x`的数据等于`dp[i][x]`，其中$0 \le x \le j$，这里你可以结合代码、文字和图片进行理解，理解效果会更加好一点。
-
-<img src="../images/dsal/dp/01-dp31.png" alt="01-dp01" style="zoom:100%;" />
-
 #### 另一种角度思考问题
+
+在上面的文章当中，我们是使用-1去表示不能够找到一个组合满足总金额数目。我们可以先将数组当中所有的数据全部初始化成`amount + 1`，这个是硬币的上界，如果我们全部使用一块的硬币进行兑换，结果是`amount`，因此最大的值不会超过`amount + 1`，因为在动态转移方程当中求的是最小值，因此在进行状态转移的时候不会选择这个值，因此下面的代码也是正确的！！！
 
 ```java
 class Solution {
   public int coinChange(int[] coins, int amount) {
     int max = amount + 1;
     int[] dp = new int[amount + 1];
-    Arrays.fill(dp, max);
+    for (int j = 0; j < dp.length; j++) {
+      dp[j] = max;
+    }
     dp[0] = 0;
-    for (int i = 1; i <= amount; i++) {
-      for (int j = 0; j < coins.length; j++) {
-        if (coins[j] <= i) {
-          dp[i] = Math.min(dp[i], dp[i - coins[j]] + 1);
+    for (int i = 0; i < coins.length; i++) {
+      for (int j = coins[i]; j <= amount; j++) {
+        if (dp[j - coins[i]] != max) {
+          dp[j] = Math.min(dp[j], dp[j - coins[i]] + 1);
         }
       }
     }
-    return dp[amount] > amount ? -1 : dp[amount];
+    return dp[amount] == max ? -1 : dp[amount];
   }
 }
 ```
