--- a/datastructr&algorithm/13零钱兑换.md
+++ b/datastructr&algorithm/13零钱兑换.md
@@ -18,7 +18,7 @@
 
 示例1
 
-```
+```java
 输入：coins = [1, 2, 5], amount = 11
 输出：3 
 解释：11 = 5 + 5 + 1
@@ -26,7 +26,7 @@
 
 示例2
 
-```
+```java
 输入：coins = [2], amount = 3
 输出：-1
 ```
@@ -84,7 +84,7 @@ $$
 dp[i][j] = min(dp[i - 1][j], dp[i][j - coins[i]] + 1)
 $$
 
-#### 代码
+### 代码
 
 ```java
 class Solution {
@@ -116,11 +116,16 @@ class Solution {
 }
 ```
 
-#### 单行数组优化
+上面的代码体现的就是**完全背包** 的思想，在题目当中硬币可以使用无限次，如果只能使用一次的话，问题就转换成**01背包**了，那么动态转移方程就为：
+$$
+dp[i][j] = min(dp[i - 1][j], dp[i - 1][j - coins[i]] + 1)
+$$
+
+### 单行数组优化
 
 <img src="../images/dsal/dp/01-dp32.png" alt="01-dp01" style="zoom:100%;" />
 
-根据动态转移方程，我们可以得到`dp`数组当中数据之间的依赖关系，他们的关系如上图所示，`dp[i][j]`依赖的数据为它上一行同列的位置，和第`i`行前面的某些数据，事实上我们可以使用单行数组去进行实现，我们使用的循环还是一样的，但是使用的数组有所变化，从之前的二维数组变成一维数组。当我们遍历到单行数组第`j`个数据的时候，第`j`个数据还是上一行的状态，但是单行数组的下标从0到`j-1`的位置数据的状态已经从上一行更新了，这些数据的状态相当于二维数组的`dp[i]`这一行的状态，而这正好可以满足动态转移方程的需求，因为在动态转移方程当中，`dp[i-1][j]`依赖的数据全部符合条件，单行数组当中的下标为`j`数据等于`dp[i][j]`，单行数组下标为`x`的数据等于`dp[i][x]`，其中$0 \le x \le j$，这里你可以结合代码、文字和图片进行理解，理解效果会更加好一点。
+根据动态转移方程$dp[i][j] = min(dp[i - 1][j], dp[i][j - coins[i]] + 1)$，我们可以得到`dp`数组当中数据之间的依赖关系，他们的关系如上图所示，`dp[i][j]`依赖的数据为它上一行同列的位置，和第`i`行前面的某些数据，事实上我们可以使用单行数组去进行实现，我们使用的循环还是一样的，但是使用的数组有所变化，从之前的二维数组变成一维数组。当我们遍历到单行数组第`j`个数据的时候，第`j`个数据还是上一行的状态，但是单行数组的下标从0到`j-1`的位置数据的状态已经从上一行更新了，这些数据的状态相当于二维数组的`dp[i]`这一行的状态，而这正好可以满足动态转移方程的需求，因为在动态转移方程当中，`dp[i-1][j]`依赖的数据全部符合条件，单行数组当中的下标为`j`数据等于`dp[i][j]`，单行数组下标为`x`的数据等于`dp[i][x]`，其中$0 \le x \le j$，这里你可以结合代码、文字和图片进行理解，理解效果会更加好一点。
 
 <img src="../images/dsal/dp/01-dp31.png" alt="01-dp01" style="zoom:100%;" />
 
@@ -145,7 +150,7 @@ class Solution {
 }
 ```
 
-#### 另一种角度思考问题
+### 另一种角度思考问题
 
 在上面的文章当中，我们是使用-1去表示不能够找到一个组合满足总金额数目。我们可以先将数组当中所有的数据全部初始化成`amount + 1`，这个是硬币的上界，如果我们全部使用一块的硬币进行兑换，结果是`amount`，因此最大的值不会超过`amount + 1`，因为在动态转移方程当中求的是最小值，因此在进行状态转移的时候不会选择这个值，因此下面的代码也是正确的！！！
 
@@ -169,4 +174,48 @@ class Solution {
   }
 }
 ```
+
+## [零钱兑换 II](https://leetcode.cn/problems/coin-change-2/)
+
+### 题目
+
+>给你一个整数数组 coins 表示不同面额的硬币，另给一个整数 amount 表示总金额。
+>
+>请你计算并返回可以凑成总金额的硬币组合数。如果任何硬币组合都无法凑出总金额，返回 0 。
+>
+>假设每一种面额的硬币有无限个。 
+>
+>题目数据保证结果符合 32 位带符号整数。
+
+### 示例
+
+示例1
+
+```java
+输入：amount = 5, coins = [1, 2, 5]
+输出：4
+解释：有四种方式可以凑成总金额：
+5=5
+5=2+2+1
+5=2+1+1+1
+5=1+1+1+1+1
+```
+
+示例2
+
+```java
+输入：amount = 3, coins = [2]
+输出：0
+解释：只用面额 2 的硬币不能凑成总金额 3 。
+```
+
+### 状态表示和状态转移方程
+
+#### 状态表示数组
+
+在这个问题当中我们也是使用一个二维数组表示我们的状态`dp[i][j]`。这个表示使用前`i`个硬币，总金额为`j`的情况下，能够找到多少种组合方式，是硬币的和等于总金额数。
+
+在这道题目当中我们也可以使用无数次硬币，因此这也是一个**完全背包**问题。
+
+#### 寻找动态转移方程
 
