update balance exchange

--- a/datastructr&algorithm/13零钱兑换.md
+++ b/datastructr&algorithm/13零钱兑换.md
@@ -219,3 +219,33 @@ class Solution {
 
 #### 寻找动态转移方程
 
+对于每一种硬币同样的有两种情况选择和不选择：
+
+- 选择，
+- 不选择，
+
+#### 初始化状态数组
+
+### 代码
+
+```java
+class Solution {
+  public int change(int amount, int[] coins) {
+    int[][] dp = new int[coins.length][amount + 1];
+    // dp[i][j] 的含义：前 i 个钱 容量 j 有多少种方法
+    for (int i = 0; i * coins[0] <= amount; i++) {
+      dp[0][i * coins[0]] = 1;
+    }
+    for (int j = 0; j <= amount; j++) {
+      for (int i = 1; i < coins.length; i++) {
+        if (j >= coins[i]) {
+          dp[i][j] = dp[i - 1][j] + dp[i][j - coins[i]];
+        } else
+          dp[i][j] = dp[i - 1][j];
+      }
+    }
+    return dp[coins.length - 1][amount];
+  }
+}
+```
+
