update balance exchange

--- a/datastructr&algorithm/13零钱兑换.md
+++ b/datastructr&algorithm/13零钱兑换.md
@@ -219,10 +219,15 @@ class Solution {
 
 #### 寻找动态转移方程
 
-对于每一种硬币同样的有两种情况选择和不选择：
+对于每一种硬币同样的有两种情况选择和不选择，每一种情况都有不同的组合，因此最终的组合数目就是将这两个结果相加：
 
-- 选择，
-- 不选择，
+- 选择，在这个情况下我们能够获得不同的组合数就是`dp[i][j - coins[i]]`，这个代码的含义就是选择一次第`i`个硬币，因为有无数个硬币，因此这个结果就等于使用前`i`个硬币组合总金额为`j-coins[i]`时，一共有多少个组合。
+- 不选择，如果不进行选择，那么久相当于使用前`i - 1`个硬币，组合总金额为`j`时，一共有多少个组合。
+
+因此最终的组合数的个数就是上面两种方式的不同组合个数相加，因此我们的动态转移方程为：
+$$
+dp[i][j] = dp[i - 1][j] + dp[i][j - coins[i]];
+$$
 
 #### 初始化状态数组
 
@@ -236,8 +241,8 @@ class Solution {
     for (int i = 0; i * coins[0] <= amount; i++) {
       dp[0][i * coins[0]] = 1;
     }
-    for (int j = 0; j <= amount; j++) {
-      for (int i = 1; i < coins.length; i++) {
+    for (int i = 1; i < coins.length; i++) {
+      for (int j = 0; j <= amount; j++) {
         if (j >= coins[i]) {
           dp[i][j] = dp[i - 1][j] + dp[i][j - coins[i]];
         } else
