update balance exchange

--- a/datastructr&algorithm/13零钱兑换.md
+++ b/datastructr&algorithm/13零钱兑换.md
@@ -231,6 +231,14 @@ $$
 
 #### 初始化状态数组
 
+在初始化`dp`数组的第一行的时候，只有时第一个硬币的整数倍的总金额才能进行匹配，如果不能匹配，那么不同的组合的数目久等于0，能够进行匹配的组合数也只有一个，那就是使用的硬币全是第一种硬币。在这里需要注意的是当总金额等于0的时候，也是有一种组合方式的，那就是没有一个硬币，这也是一种组合方式，就相当于集合的空基，因此初始化代码如下：
+
+```java
+for (int i = 0; i * coins[0] <= amount; i++) {
+  dp[0][i * coins[0]] = 1;
+
+```
+
 ### 代码
 
 ```java
