update balance exchange

--- a/datastructr&algorithm/13零钱兑换.md
+++ b/datastructr&algorithm/13零钱兑换.md
@@ -262,3 +262,29 @@ class Solution {
 }
 ```
 
+其实这道题也有对应的**01背包**问题，在这道题目当中是**完全背包**问题的变种，如果所有的硬币只能够使用一次的话，那么动态转移方程如下：
+$$
+dp[i][j] = dp[i - 1][j] + dp[i - 1][j - coins[i]];
+$$
+
+### 单行数组优化
+
+```java
+class Solution {
+  public int change(int amount, int[] coins) {
+    int[] dp = new int[amount + 1];
+    // dp[i][j] 的含义：前 i 个钱 容量 j 有多少种方法
+    dp[0] = 1;
+    for (int i = 0; i < coins.length; i++) {
+      for (int j = coins[i]; j <= amount; j++)
+        dp[j] += dp[j - coins[i]];
+    }
+    return dp[amount];
+  }
+}
+```
+
+这个优化的原理和第一题也是一样的，通过分析动态转移方程，看单行数组是否能够满足动态转移方程的要求，如果能够满足的话，那就能够进行单行数组优化，反之不能进行优化，而在这个问题当中，数据依赖关系和第一题是一样的，`dp[i][j]`依赖的数据是`dp[i - 1][j]`和`dp`数组第`i`行前`j - 1`个数据，根据第一题的分析，我们是可以使用单行数组进行优化的！！！
+
+## 总结
+
