update balance exchange

--- a/datastructr&algorithm/13零钱兑换.md
+++ b/datastructr&algorithm/13零钱兑换.md
@@ -288,3 +288,4 @@ class Solution {
 
 ## 总结
 
+在本篇文章当中主要给大家介绍了两道**零钱兑换**的问题，在本文当中的这两道题目都是属于**完全背包**的变种，如果要彻底弄懂这个问题的话就需要好好分析动态转移方程和数据之间的依赖关系，通过分析数据之间的依赖关系，我们自己也可以从零推导优化过程。
