update balance exchange

--- a/datastructr&algorithm/13零钱兑换.md
+++ b/datastructr&algorithm/13零钱兑换.md
@@ -288,4 +288,13 @@ class Solution {
 
 ## 总结
 
-在本篇文章当中主要给大家介绍了两道**零钱兑换**的问题，在本文当中的这两道题目都是属于**完全背包**的变种，如果要彻底弄懂这个问题的话就需要好好分析动态转移方程和数据之间的依赖关系，通过分析数据之间的依赖关系，我们自己也可以从零推导优化过程。
+在本篇文章当中主要给大家介绍了两道**零钱兑换**的问题，在本文当中的这两道题目都是属于**完全背包**的变种，如果要彻底弄懂这个问题的话就需要好好分析动态转移方程和数据之间的依赖关系，通过分析数据之间的依赖关系，我们自己也可以从零推导优化过程。在这两道问题当中硬币都可以使用无数次，如果将能够使用的硬币只能够使用一次的话，那么这个问题就变成**01背包**的变种问题了。
+
+---
+
+更多精彩内容合集可访问项目：<https://github.com/Chang-LeHung/CSCore>
+
+关注公众号：**一无是处的研究僧**，了解更多计算机（Java、Python、计算机系统基础、算法与数据结构）知识。
+
+![](https://img2022.cnblogs.com/blog/2519003/202207/2519003-20220703200459566-1837431658.jpg)
+
