update balance exchange

--- a/datastructr&algorithm/13零钱兑换.md
+++ b/datastructr&algorithm/13零钱兑换.md
@@ -2,7 +2,7 @@
 
 ## 前言
 
-在本篇文章当中主要通过介绍两个算法题，从最基本的问题开始深入浅出零钱兑换问题，帮助大家从动态规划的本源深入理解问题当中的原理，并且学会自己分析问题，再也不怕类似于背包问题的算法题了。
+在本篇文章当中主要通过介绍两个算法题，从最基本的问题开始深入浅出零钱兑换问题，帮助大家从动态规划的本源深入理解问题当中的原理，并且学会自己分析问题，分析数据之间的依赖关系，通过分析这种关系自己推导算法的优化过程，再也不怕类似于背包问题的算法题了。
 
 ## [零钱兑换](https://leetcode.cn/problems/coin-change/)
 
