update balance exchange

--- a/datastructr&algorithm/13零钱兑换.md
+++ b/datastructr&algorithm/13零钱兑换.md
@@ -222,7 +222,7 @@ class Solution {
 对于每一种硬币同样的有两种情况选择和不选择，每一种情况都有不同的组合，因此最终的组合数目就是将这两个结果相加：
 
 - 选择，在这个情况下我们能够获得不同的组合数就是`dp[i][j - coins[i]]`，这个代码的含义就是选择一次第`i`个硬币，因为有无数个硬币，因此这个结果就等于使用前`i`个硬币组合总金额为`j-coins[i]`时，一共有多少个组合。
-- 不选择，如果不进行选择，那么久相当于使用前`i - 1`个硬币，组合总金额为`j`时，一共有多少个组合。
+- 不选择，如果不进行选择，那么就相当于使用前`i - 1`个硬币，组合总金额为`j`时，一共有多少个组合。
 
 因此最终的组合数的个数就是上面两种方式的不同组合个数相加，因此我们的动态转移方程为：
 $$
@@ -231,7 +231,7 @@ $$
 
 #### 初始化状态数组
 
-在初始化`dp`数组的第一行的时候，只有时第一个硬币的整数倍的总金额才能进行匹配，如果不能匹配，那么不同的组合的数目久等于0，能够进行匹配的组合数也只有一个，那就是使用的硬币全是第一种硬币。在这里需要注意的是当总金额等于0的时候，也是有一种组合方式的，那就是没有一个硬币，这也是一种组合方式，就相当于集合的空基，因此初始化代码如下：
+在初始化`dp`数组的第一行的时候，只有是第一个硬币的整数倍的总金额才能进行匹配，如果不能匹配，那么不同的组合的数目就等于0，能够进行匹配的组合数也只有一个，那就是使用的硬币全是第一种硬币。在这里需要注意的是当总金额等于0的时候，也是有一种组合方式的，那就是没有一个硬币，这也是一种组合方式，就相当于集合的空基，因此初始化代码如下：
 
 ```java
 for (int i = 0; i * coins[0] <= amount; i++) {
