update state machine summary

--- a/datastructr&algorithm/12状态机动态规划总结.md
+++ b/datastructr&algorithm/12状态机动态规划总结.md
@@ -6,10 +6,92 @@
 
 <img src="../images/dsal/dp/01-dp41.png" alt="01-dp40" style="zoom:80%;" />
 
+如果需要仔细的去分析上面思维导图当中的各个问题，可以参考下面的文章：
+
 | 内容                               | 链接                                                         |
 | ---------------------------------- | ------------------------------------------------------------ |
 | 买卖股票的最佳时机I和II            | [这种动态规划你见过吗——状态机动态规划之股票问题(上)](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247485286&idx=1&sn=3d0a6a1c2e62ba770d8427c6dd732973&chksm=cf0c9b6ff87b1279d46c775001fd77b8e1437d4001a6c8a1ca8db090eadb4174af1058a1aadf&token=1125062744&lang=zh_CN#rd) |
 | 买卖股票的最佳时机III和Iv          | [这种动态规划你见过吗——状态机动态规划之股票问题(中)](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247485500&idx=1&sn=f9283ccc6e0c909641eadb9c761f6d1b&chksm=cf0c9435f87b1d23f1361bdd62946d3e6bb79b1415718fd15150bd47215b5ab490510bb51967&token=1092368950&lang=zh_CN#rd) |
 | 买卖股票的最佳时机含冷冻期和手续费 | [这种动态规划你见过吗——状态机动态规划之股票问题(下)](买卖股票的最佳时机I和II) |
 |                                    |                                                              |
+
+本篇文章就是对上面6个问题进行总结，这6个问题都是动态规划的问题，因此你可以需要熟悉一下动态规划的套路，在求解动态规划问题的时候通常的步骤有以下几个：
+
+- 寻找能够表示状态的数组`dp`，即我们需要寻找`dp`的含义，分析需要用几纬数组表示具体的状态。
+- 通过分析问题，寻找动态转移公式。
+- 初始化状态数组。
+- 通过分析动态转移方程，确定数组的遍历顺序。
+
+## [买卖股票的最佳时机I](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock/)
+
+>给定一个数组 prices ，它的第 i 个元素 prices[i] 表示一支给定股票第 i 天的价格。你只能选择 某一天 买入这只股票，并选择在未来的某一个不同的日子卖出该股票。设计一个算法来计算你所能获取的最大利润。返回你可以从这笔交易中获取的最大利润。如果你不能获取任何利润，返回 0 。
+
+#### 状态表示数组
+
+在这个问题当中我们用一个二维数组去表示我们的状态，在这个问题当中主要有两个状态，一个是手上有股票，另一是手上没有股票：
+
+- `dp[i][0]`表示在第`i`天手上没有股票能够获得的最大的收益，比如我们在第一天的没有股票的收益为0元。
+
+- `dp[i][1]`表示在第`i`天手上存在股票能够获得的最大的收益，比如我们在第一天买入股票之后收益为`-prices[0]`。
+
+那么我们最后的答案是`dp[N][0]`，这个表示在最后一天，我们的手中不存在股票，即我们将股票卖出去能够获取的最大的收益。
+
+#### 状态转移方程
+
+现在我们来分析一下如何进行状态的转移：
+
+- `dp[i][0]`的状态如何从第`i-1`的状态转移过来：
+
+  - 如果第`i-1`个状态是手中不存在股票，即`dp[i-1][0]`，那么第`i`个状态也没有股票，那么直接是`dp[i][0] = dp[i - 1][0]`，因为没有进行交易。
+  - 如果第`i-1`个状态手中存在股票，即`dp[i-1][1]`，那么如果想在第`i`个状态没有股票，那么就需要将股票卖出，那么收益就为`dp[i-1][1] +prices[i]`，即`dp[i][0] = dp[i-1][1] +prices[i]`。
+  - 综合上面的两种转移方式可以得到下面的转移方程：
+
+  $$
+  dp[i][0] = max(dp[i - 1][0], dp[i - 1][1] + prices[i])
+  $$
+
+- `dp[i][1]`的状态如何进行转移：
+
+  - 如果第`i-1`个状态是手中不存在股票，即`dp[i-1][0]`，而第`i`个状态有股票，那么`dp[i][0] = -prices[i]`，因为买入股票，而且只能够买入一次，因此直接等于`-prices[i]`即可，注意这里不能是`dp[i - 1][0] - prices[i]`，因为在`dp[i-][0]`当中可能存在先买入再卖出的情况，而题干要求只能买入卖出一次。
+  - 如果第`i-1`个状态手中存在股票，即`dp[i-1][1]`，而第`i`个状态有股票，因此不需要进行交易，即`dp[i][1]=dp[i - 1][1]`。
+  - 综合上面的两种转移方式可以得到下面的转移方程：
+
+  $$
+  dp[i][1] = max(dp[i - 1][1], -prices[i]);
+  $$
+
+
+### 代码
+
+```java
+class Solution {
+  public int maxProfit(int[] prices) {
+    int[][] dp = new int[prices.length][2];
+    // 初始化数组 dp[0][0] 默认等于0 不用
+    // 显示初始化
+    dp[0][1] = -prices[0];
+    for (int i = 1; i < prices.length; i++) {
+      dp[i][0] = Math.max(dp[i - 1][0], dp[i - 1][1] + prices[i]);
+      dp[i][1] = Math.max(dp[i - 1][1], -prices[i]);
+    }
+    return dp[prices.length - 1][0];
+  }
+}
+```
+
+进行数组空间优化
+
+```java
+class Solution {
+  public int maxProfit(int[] prices) {
+    int[][] dp = new int[2][2];
+    dp[0][1] = -prices[0];
+    for (int i = 1; i < prices.length; i++) {
+      dp[i & 1][0] = Math.max(dp[(i - 1) & 1][0], dp[(i - 1) & 1][1] + prices[i]);
+      dp[i & 1][1] = Math.max(dp[(i - 1) & 1][1], -prices[i]);
+    }
+    return dp[(prices.length - 1) & 1][0];
+  }
+}
+```
 
