--- a/datastructr&algorithm/12状态机动态规划总结.md
+++ b/datastructr&algorithm/12状态机动态规划总结.md
@@ -2,7 +2,7 @@
 
 ## 前言
 
-在前面的三篇股票问题当中我们一共介绍了6道于股票相关的算法题，这些算法题的一个集中的特点就是状态比较多，需要我们去仔细分析状态之间的转换，而这种状态之间的转换特变像状态机，因此这种动态规划也被称作**状态机动态规划**。
+在前面的三篇股票问题的文章当中我们一共介绍了6道于股票相关的算法题，这些算法题的一个集中的特点就是状态比较多，需要我们去仔细分析状态之间的转换，而这种状态之间的转换特变像状态机，因此这种动态规划也被称作**状态机动态规划**。
 
 <img src="../images/dsal/dp/01-dp41.png" alt="01-dp40" style="zoom:80%;" />
 
@@ -159,3 +159,32 @@ class Solution {
 }
 ```
 
+## [卖股票的最佳时机 III](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-iii/)
+
+
+
+>给定一个数组，它的第 i 个元素是一支给定的股票在第 i 天的价格。设计一个算法来计算你所能获取的最大利润。你最多可以完成 两笔 交易。注意：你不能同时参与多笔交易（你必须在再次购买前出售掉之前的股票）。
+
+### 状态表示数组和状态转移方程
+
+在这道题目当中我们也是二维数组进行状态的表示，二维数组为`dp[N][5]`，5表示我们有5个状态，`dp[N][i]`表示第N天的第i个状态能够多大的收益！**（为了方便下面介绍，假设一天有一个股票，`dp[N][]`表示第N天的状态，对应第N个股票的状态）**
+
+- `dp[N][0]`，表示第N天一次买入和卖出的操作都没有过，那么`dp[N][0] = dp[N - 1][0]`，跟前一天的状态一样，都没有进行股票的买入和卖出，其实也可以直接令`dp[N][0] = 0`，因为没有进行操作我们的收益肯定等于0。
+- `dp[N][1]`，表示第N天已经进行过第一次买入，这个买入可以是在第N天进行买入，也可以在前面N-1天买入，然后在第N天保持状态。
+  - 如果第N天刚刚进行买入，那么我们的收益就是从前一天一次买入和卖出都没有操作转移过来的，那么就有`dp[N][0] - prices[i]`，因为根据上面的分析`dp[N][0] = 0`，那么直接让`dp[N][1] = -prices[i]`即可。
+  - 如果在前N-1天已经进行了买入，那么在第N天就不行操作，即在第N天收入为0，即`dp[N][1] = dp[N - 1][1]`。
+- `dp[N][2]`，表示第N天已经进行过第一次卖出，这个状态可以是在第N天进行卖出，也可以是在前面N-1天已经卖出，然后在第N天保持状态
+  - 如果在第N天进行第一次卖出那么我们在第N天的收益就等于`prices[i]`，再加上前N-1天买入一次的收益，即`dp[N][2] = dp[N - 1][1] + prices[i]`。
+  - 如果前N-1天已经卖出，那么直接保持状态即可，我们在第N天的收益就为0，那么`dp[N][2] = dp[N - 1][2]`。
+- `dp[N][3]`，表示第N天已经进行过第二次买入，这个状态可以是在第N天进行买入，也可以是在前面N-1天买入，然后在第N天保持状态。
+  - 如果在第N天进行第二次买入那么我们在第N天的收益就等于`-prices[i]`，再加上前N-1天买入卖出一次的收益，即`dp[N][3] = dp[N - 1][2] - prices[i]`。
+  - 如果前N-1天已经有了第二次买入的操作，那么直接保持状态即可，我们在第N天的收益就为0，那么`dp[N][3] = dp[N - 1][3]`。
+- `dp[N][4]`，表示第N天已经进行过第二次卖出，这个状态可以是在第N天进行买入，也可以是在前面N-1天卖出，然后在第N天保持状态。
+  - 如果是在第N天卖出，那么在第N天的收益为`prices[i]`，再加上前N-1天买入两次卖出一次的收益`dp[N][3]`，那么`dp[N][4] = dp[N - 1][3] + prices[i]`。
+  - 如果是前N-1天已经买入卖出两次了，那么直接保持前一天的状态即可，即`dp[N][4] = dp[N-1][4]`。
+
+根据上面的分析我们可以得到下面的状态机（状态转移图）：
+
+<img src="../images/dsal/dp/01-dp39.png" alt="01-dp39" style="zoom:80%;" />
+
+相信看到这里你就应该能够理解为什么这种动态规划叫做**状态机动态规划**，因为在这种动态规划当中数据存在很多状态，而我们需要进行仔细的分析，分析清楚这里面的状态该如何进行转移，进而分析出来各种状态之间的转移关系，这种模式跟状态机非常像，因此叫做**状态机动态规划**。
