--- a/datastructr&algorithm/12状态机动态规划总结.md
+++ b/datastructr&algorithm/12状态机动态规划总结.md
@@ -188,3 +188,41 @@ class Solution {
 <img src="../images/dsal/dp/01-dp39.png" alt="01-dp39" style="zoom:80%;" />
 
 相信看到这里你就应该能够理解为什么这种动态规划叫做**状态机动态规划**，因为在这种动态规划当中数据存在很多状态，而我们需要进行仔细的分析，分析清楚这里面的状态该如何进行转移，进而分析出来各种状态之间的转移关系，这种模式跟状态机非常像，因此叫做**状态机动态规划**。
+
+```java
+dp[i][0] = dp[i - 1][0];
+dp[i][1] = max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
+dp[i][2] = max(dp[i - 1][2], dp[i - 1][1] + prices[i]);
+dp[i][3] = max(dp[i - 1][3], dp[i - 1][2] - prices[i]);
+dp[i][4] = max(dp[i - 1][4], dp[i - 1][3] + prices[i]);
+```
+
+代码如下：
+
+```java
+class Solution {
+  public int maxProfit(int[] prices) {
+    int[][] dp = new int[prices.length][5];
+    // dp[i][0] 表示一次买入和卖出都没有
+    // dp[i][1] 表示第一次买入
+    // dp[i][2] 表示第一次卖出
+    // dp[i][3] 表示第二次买入
+    // dp[i][4] 表示第二次卖出
+    dp[0][1] = -prices[0];
+    dp[0][3] = -prices[0];
+    for (int i = 1; i < prices.length; i++) {
+      dp[i][0] = dp[i - 1][0];
+      dp[i][1] = Math.max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
+      dp[i][2] = Math.max(dp[i - 1][2], dp[i - 1][1] + prices[i]);
+      dp[i][3] = Math.max(dp[i - 1][3], dp[i - 1][2] - prices[i]);
+      dp[i][4] = Math.max(dp[i - 1][4], dp[i - 1][3] + prices[i]);
+    }
+    return dp[prices.length - 1][4];
+    // 注意数据之前传递依赖的关系
+    // 因为要求 dp[N][4] 当中
+    // 最大的值 因此需要求解 dp[N - 1][4] 和 dp[i - 1][3] 的最大值
+    // ......
+  }
+}
+```
+
