update state machine summary

--- a/datastructr&algorithm/12状态机动态规划总结.md
+++ b/datastructr&algorithm/12状态机动态规划总结.md
@@ -165,7 +165,7 @@ class Solution {
 
 >给定一个数组，它的第 i 个元素是一支给定的股票在第 i 天的价格。设计一个算法来计算你所能获取的最大利润。你最多可以完成 两笔 交易。注意：你不能同时参与多笔交易（你必须在再次购买前出售掉之前的股票）。
 
-### 状态表示数组和状态转移方程
+### 状态表示数组
 
 在这道题目当中我们也是二维数组进行状态的表示，二维数组为`dp[N][5]`，5表示我们有5个状态，`dp[N][i]`表示第N天的第i个状态能够多大的收益！**（为了方便下面介绍，假设一天有一个股票，`dp[N][]`表示第N天的状态，对应第N个股票的状态）**
 
@@ -188,6 +188,12 @@ class Solution {
 <img src="../images/dsal/dp/01-dp39.png" alt="01-dp39" style="zoom:80%;" />
 
 相信看到这里你就应该能够理解为什么这种动态规划叫做**状态机动态规划**，因为在这种动态规划当中数据存在很多状态，而我们需要进行仔细的分析，分析清楚这里面的状态该如何进行转移，进而分析出来各种状态之间的转移关系，这种模式跟状态机非常像，因此叫做**状态机动态规划**。
+
+### 状态转移方程
+
+假如可以买卖股票的天数一共有N天，那么我们最终需要求出来的结果是`dp[N][4]`，表示第N天已经买入卖出2次，将两次使用的机会都是用完了，为什么我们最终的结果是`dp[N][4]`呢？这你可能疑惑万一我买入一次卖出一次能够得到的收益最大呢？我们是允许在同一天多次买入和卖出股票的，而在同一天买入和卖出股票收益为0，所以不影响最后的结果，因此买入卖出一次最终也可以转移到买入卖出两次（其中一次在同一天买入和卖出即可，我们在对数组进行初始化的时候就需要进行多次买入和卖出（可以看下文当中对数组初始化的分析）），因此我们最终需要返回的结果就是`dp[N][4]`。
+
+而根据上面的分析我们知道，从上图可以看出转移到`dp[N][4]`这个状态一共有两种方式，我们应该选择转移之后两者方式得到的价值比较大的那个，即`dp[N][4] = max(dp[N - 1][4], dp[N - 1][3] + prices[i]);`，而`dp[N - 1][4]`的转移又有两种方式我们也应该选择其中较大的，`dp[N - 1][3]`也有两种转移方式，因此其也应该选择两者当中比较大的那个值，即`dp[N][3] = max(dp[N - 1][3], dp[N - 1][2] - prices[N]);`，同理我们可以得到其他状态的转移方程，每个数据都是需要选择转移之后价值最大的那个，最终我们的状态转移方程如下：
 
 ```java
 dp[i][0] = dp[i - 1][0];
