update state machine summary

--- a/datastructr&algorithm/12状态机动态规划总结.md
+++ b/datastructr&algorithm/12状态机动态规划总结.md
@@ -26,7 +26,7 @@
 
 >给定一个数组 prices ，它的第 i 个元素 prices[i] 表示一支给定股票第 i 天的价格。你只能选择 某一天 买入这只股票，并选择在未来的某一个不同的日子卖出该股票。设计一个算法来计算你所能获取的最大利润。返回你可以从这笔交易中获取的最大利润。如果你不能获取任何利润，返回 0 。
 
-#### 状态表示数组
+### 状态表示数组
 
 在这个问题当中我们用一个二维数组去表示我们的状态，在这个问题当中主要有两个状态，一个是手上有股票，另一是手上没有股票：
 
@@ -36,7 +36,7 @@
 
 那么我们最后的答案是`dp[N][0]`，这个表示在最后一天，我们的手中不存在股票，即我们将股票卖出去能够获取的最大的收益。
 
-#### 状态转移方程
+### 状态转移方程
 
 现在我们来分析一下如何进行状态的转移：
 
@@ -95,11 +95,11 @@ class Solution {
 }
 ```
 
-# [买卖股票的最佳时机 II](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-ii/)
+## [买卖股票的最佳时机 II](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-ii/)
 
 >给你一个整数数组 prices ，其中 prices[i] 表示某支股票第 i 天的价格。在每一天，你可以决定是否购买和/或出售股票。你在任何时候 最多 只能持有 一股 股票。你也可以先购买，然后在 同一天 出售。返回你能获得的最大 利润。
 
-#### 状态表示数组
+### 状态表示数组
 
 在这个问题当中我们用一个二维数组去表示我们的状态，在这个问题当中主要有两个状态，一个是手上有股票，另一是手上没有股票：
 
@@ -109,7 +109,7 @@ class Solution {
 
 那么我们最后的答案是`dp[N][0]`，这个表示在最后一天，我们的手中不存在股票，即我们将股票卖出去能够获取的最大的收益。
 
-#### 状态转移方程
+### 状态转移方程
 
 现在我们来分析一下如何进行状态的转移：
 
@@ -232,3 +232,79 @@ class Solution {
 }
 ```
 
+## [卖股票的最佳时机 IV](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-iv/)
+
+>给定一个整数数组 prices ，它的第 i 个元素 prices[i] 是一支给定的股票在第 i 天的价格。设计一个算法来计算你所能获取的最大利润。你最多可以完成 k 笔交易。注意：你不能同时参与多笔交易（你必须在再次购买前出售掉之前的股票）。
+
+### 状态表示数组和动态转移方程
+
+这个问题和本文当中的第一个问题其实差不多，只不过上面的问题是最多完成两笔交易，而在这个问题当中是最多可以完成`k`笔交易，这个问题相当于上面问题的推广，我们再来分析一下上一道题目的动态转移公式：
+
+```java
+dp[i][0] = dp[i - 1][0];
+dp[i][1] = max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
+dp[i][2] = max(dp[i - 1][2], dp[i - 1][1] + prices[i]);
+dp[i][3] = max(dp[i - 1][3], dp[i - 1][2] - prices[i]);
+dp[i][4] = max(dp[i - 1][4], dp[i - 1][3] + prices[i]);
+```
+
+上面的公式用一个公式表示就是：
+$$
+dp[i][j] = max(dp[i - 1][j], dp[i - 1][j - 1] \pm prices[i]);
+$$
+现在我们将这个问题进行推广：
+
+- 状态表示
+
+  - `dp[i][0]` 表示一次买入和卖出都没有。
+  - `dp[i][2 * k - 1]` 表示第 `k` 次买入。
+    - 根据上文的分析，这个地方类似，有两种状态可以转换成第`k`次买入这个状态。
+      - 如果前`i-1`天已经有`k`次买入了，则保持前面的状态就行，即`dp[i][2 * k - 1] = dp[i - 1][2 * k - 1]`。
+      - 如果前`i-1`天已经有`k-1`次买入和卖出了，那么就需要进行买入，即`dp[i][2 * k - 1] = dp[i - 1][2 * k - 2]- prices[i]` 。
+  - `dp[i][2 * k]` 表示第 `k` 次卖出。
+    - 同样的，也有两个状态可以转换成这个状态。
+      - 如果前`i-1`天已经有`k`次卖出了，则保持前面的状态就行，即`dp[i][2 * k] = dp[i - 1][2 * k]`。
+      - 如果前`i-1`天已经有`k`次买入，那么就需要进行买入，即`dp[i][2 * k] = dp[i - 1][2 * k - 1] + prices[i]`。
+
+  根据上面的分析，那么状态转移方程如下（其中`j`是偶数）：
+
+  ```java
+  dp[i][j - 1] = max(dp[i - 1][j - 1], dp[i - 1][j - 2] - prices[i]);
+  dp[i][j] = max(dp[i - 1][j], dp[i - 1][j - 1] + prices[i]);
+  ```
+
+  同理我们最终需要返回的结果就是`dp[N][2 * k]`。
+
+- 数组初始化
+
+  - 根据我们的分析，在买入之前必须卖出，因此在第一行当中所有的买入状态的价值都是`-pirces[0]`，所有的卖出状态的价值都是0，因为买入之后再卖出就相当于没有买卖一样。
+
+```java
+class Solution {
+  public int maxProfit(int k, int[] prices) {
+    if (prices == null || prices.length == 0)
+      return 0;
+    int m = 2 * k + 1;
+    int[][] dp = new int[prices.length][m];
+    // dp[i][0] 表示一次买入和卖出都没有
+    // dp[i][2 * k - 1] 表示第 k 次买入
+    // dp[i][2 * k] 表示第 k 次卖出
+    for (int i = 1; i < m; i += 2) {
+      dp[0][i] = -prices[0];
+    }
+    for (int i = 1; i < prices.length; i++) {
+      dp[i][0] = dp[i - 1][0];
+      for (int j = 2; j < m; j += 2) {
+        dp[i][j - 1] = Math.max(dp[i - 1][j - 1], dp[i - 1][j - 2] - prices[i]);
+        dp[i][j] = Math.max(dp[i - 1][j], dp[i - 1][j - 1] + prices[i]);
+
+      }
+    }
+    return dp[prices.length - 1][2 * k];
+    // 注意数据之前传递依赖的关系
+  }
+
+}
+```
+
+\
