--- a/datastructr&algorithm/12状态机动态规划总结.md
+++ b/datastructr&algorithm/12状态机动态规划总结.md
@@ -238,7 +238,7 @@ class Solution {
 
 ### 状态表示数组和动态转移方程
 
-这个问题和本文当中的第一个问题其实差不多，只不过上面的问题是最多完成两笔交易，而在这个问题当中是最多可以完成`k`笔交易，这个问题相当于上面问题的推广，我们再来分析一下上一道题目的动态转移公式：
+这个问题上面一个问题其实差不多，只不过上面的问题是最多完成两笔交易，而在这个问题当中是最多可以完成`k`笔交易，这个问题相当于上面问题的推广，我们再来分析一下上一道题目的动态转移公式：
 
 ```java
 dp[i][0] = dp[i - 1][0];
@@ -303,8 +303,74 @@ class Solution {
     return dp[prices.length - 1][2 * k];
     // 注意数据之前传递依赖的关系
   }
-
 }
 ```
 
-\
+## [最佳买卖股票时机含冷冻期](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-with-cooldown/)
+
+>给定一个整数数组prices，其中第  prices[i] 表示第 i 天的股票价格 。设计一个算法计算出最大利润。在满足以下约束条件下，你可以尽可能地完成更多的交易（多次买卖一支股票）:卖出股票后，你无法在第二天买入股票 (即冷冻期为 1 天)。
+>
+>注意：你不能同时参与多笔交易（你必须在再次购买前出售掉之前的股票）。
+
+### 状态表示数组和状态转移方程
+
+和前面的题目一样首先还是需要进行状态的定义和状态转移的分析，在这个问题当中我们用一个二维数组`dp[i][j]`表示各种不同的状态下的收益，在这个问题当中我们有以下几个状态：
+
+- `dp[i][0]`，表示在遍历到第`i`支股票的时候没有进行一次买入和卖出。
+
+  - 在这个时候没有进行买入和卖出，这个时候的收益和遍历到第`i-1`支股票的时候没有买入和卖出的情况是一样的，他们的收益都等于0，即`dp[i][0] = 0`，`dp[i - 1][0] = 0`。
+
+- `dp[i][1]`，表示在遍历到第`i`支股票的时候手中含有股票，这个情况可以由**三**种情况转移过来：
+
+  - 在遍历到第`i-1`支股票的时候手中已经存在股票了，这个时候只需要保持状态，那么在第`i`支股票的时候的收益和第`i-1`支股票的收益是相等的，即`dp[i][1] = dp[i - 1][1]`。
+  - 第二种情况就是在遍历到第`i-1`支股票的时候手中不存在股票，那么这个时候要想手中存在股票就需要进行买入了，那么就需要花费`prices[i]`，那么在遍历到第`i`支股票的时候收益等于`dp[i][1] = dp[i - 1][0] - prices[i]`。
+  - 第三种情况是前一天是处于冷冻期（这里所谈到的冷冻期并不只是前2天卖出，导致的前一天的冷冻期，还有可能是更早之前卖出的，然后保持它的状态，相当于是冷冻期的续期，只不过在续期当中是可以进行买股票的），那么现在是可以进行买入的，即`dp[i][1] = dp[i - 1][3] - prices[i]`，其中`dp[i][3]`表示遍历到第`i`支股票的时候处于冷冻期的收益。
+  - 综合以上三种情况：
+
+  $$
+  dp[i][1] = max(dp[i - 1][1], max(dp[i - 1][0] - prices[i], dp[i-1][3] - prices[i]))
+  $$
+
+- `dp[i][2]`，表示在第`i`支股票的时候手中不含有股票，可以转移到这个状态的状态一共有两种：
+
+  - 在遍历到第`i-1`支股票的时候手中本来就不含有股票，那么我们只需要保持状态即可，即`dp[i][2] = dp[i - 1][2]`。
+  - 在遍历到第`i-1`支股票的时候手中含有股票，那么我们需要将这个股票进行售出，即`dp[i][2] = dp[i - 1][1] + prices[i]`。
+  - 综合以上两种情况：
+
+  $$
+  dp[i][2] = max(dp[i - 1][2], dp[i - 1][1] + prices[i])
+  $$
+
+- `dp[i][3]`，表示在第`i`支股票的时候是处在冷冻期，这个状态只能由一个状态转移过来，那就是前一天手中没有股票（因为进行卖出了），即`dp[i][3] = dp[i][2]`。
+
+### 数组的初始化和遍历顺序
+
+根据上面的分析我们可以知道，在遍历到第一支股票的时候如果持有股票的话就需要进行买入，那么买入的状态`dp[0][1]`的值就等于`-prices[0]`，卖出的状态收益为0，冷冻期的状态也等于0。根据状态转移方程第`i`行的数据依赖第`i-1`行，因此从前往后遍历就行。
+
+### 最大收益
+
+根据上文当中我们设置的状态，我们能够获取的最大的收益为`dp[prices.length - 1][2], dp[prices.length - 1][3]`两者当中的一个，因为最终我们要想收益最大手中肯定没有股票，而没有股票的状态有上述提到的两个状态。
+$$
+max(dp[prices.length - 1][2], dp[prices.length - 1][3])
+$$
+
+```java
+class Solution {
+  public int maxProfit(int[] prices) {
+    // dp[i][0] 表示一次买入和卖出操作都没有 这个值始终等于0，可以不用这个状态
+    // 但是为了完整将这个状态留下来了
+    // dp[i][1] 表示持有股票
+    // dp[i][2] 表示不持有股票
+    // dp[i][3] 卖出操作之后的冷冻期
+    int[][] dp = new int[prices.length][4];
+    dp[0][1] = -prices[0];
+    for (int i = 1; i < prices.length; ++i) {
+      dp[i][1] = Math.max(Math.max(dp[i - 1][1], dp[i - 1][3] - prices[i]),
+          dp[i][0] - prices[i]); // 因为dp[i][0] 始终等于0 因此这里可以直接写 -prices[i] 也行
+      dp[i][2] = Math.max(dp[i - 1][2], dp[i - 1][1] + prices[i]);
+      dp[i][3] = dp[i - 1][2];
+    }
+    return Math.max(dp[prices.length - 1][2], dp[prices.length - 1][3]);
+  }
+}
+```
