--- a/datastructr&algorithm/12状态机动态规划总结.md
+++ b/datastructr&algorithm/12状态机动态规划总结.md
@@ -374,3 +374,114 @@ class Solution {
   }
 }
 ```
+
+## [买卖股票的最佳时机含手续费](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-with-transaction-fee/)
+
+>给定一个整数数组 prices，其中 prices[i]表示第 i 天的股票价格 ；整数 fee 代表了交易股票的手续费用。
+>
+>你可以无限次地完成交易，但是你每笔交易都需要付手续费。如果你已经购买了一个股票，在卖出它之前你就不能再继续购买股票了。
+>
+>返回获得利润的最大值。
+>
+>注意：这里的一笔交易指买入持有并卖出股票的整个过程，每笔交易你只需要为支付一次手续费。
+
+### 状态表示数组和状态转移方程
+
+这道题其实和在[这种动态规划你见过吗——状态机动态规划之股票问题(上)](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247485286&idx=1&sn=3d0a6a1c2e62ba770d8427c6dd732973&chksm=cf0c9b6ff87b1279d46c775001fd77b8e1437d4001a6c8a1ca8db090eadb4174af1058a1aadf&token=1092368950&lang=zh_CN#rd)当中的第二道题很相似，唯一的区别就是这里加上了手续费，其余部分是一模一样。
+
+现在我们来分析一下如何进行状态的转移：
+
+- `dp[i][0]`的状态如何从第`i-1`的状态转移过来：
+
+  - 如果第`i-1`个状态是手中不存在股票，即`dp[i-1][0]`，那么第`i`个状态也没有股票，那么直接是`dp[i][0] = dp[i - 1][0]`，因为没有进行交易。
+  - 如果第`i-1`个状态手中存在股票，即`dp[i-1][1]`，那么如果想在第`i`个状态没有股票，那么就需要将股票卖出，那么收益就为`dp[i-1][1] + prices[i]`，即`dp[i][0] = dp[i-1][1] + prices[i]`，但是在这个题目当中会有手续费，我们在卖出的时候需要缴纳手续费，那么我们的收益就变成`dp[i][0] = dp[i-1][1] + prices[i] -fee`。
+  - 综合上面的两种转移方式可以得到下面的转移方程：
+
+  $$
+  dp[i][0] = max(dp[i - 1][0], dp[i - 1][1] + prices[i] -fee)
+  $$
+
+- `dp[i][1]`的状态如何进行转移：
+
+  - 如果第`i-1`个状态是手中不存在股票，即`dp[i-1][0]`，那么我们就需要从第`i-1`个手中不存在股票的状态进行买入，那么`dp[i][0] = dp[i - 1][0] - prices[i]`。
+  - 如果第`i-1`个状态手中存在股票，即`dp[i-1][1]`，而第`i`个状态有股票，因此不需要进行交易，即`dp[i][1]=dp[i - 1][1]`。
+  - 综合上面的两种转移方式可以得到下面的转移方程：
+
+  $$
+  dp[i][1] = max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
+  $$
+
+- 综合上面的两个状态：
+
+$$
+\begin{cases}dp[i][0] = max(dp[i - 1][0], dp[i - 1][1] + prices[i] -fee)\\
+            dp[i][1] = max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
+            \end{cases}
+$$
+
+### 代码
+
+```java
+class Solution {
+  public int maxProfit(int[] prices, int fee) {
+    int[][] dp = new int[prices.length][2];
+    // dp[i][0] 表示不持有股票
+    // dp[i][1] 表示持有股票
+    dp[0][1] = -prices[0];
+    for (int i = 1; i < prices.length; ++i) {
+      dp[i][0] = Math.max(dp[i - 1][0], dp[i - 1][1] + prices[i] - fee);
+      dp[i][1] = Math.max(dp[i - 1][1], dp[i - 1][0] - prices[i]);
+    }
+    return dp[prices.length - 1][0];
+  }
+}
+```
+
+### 数组优化——滚动数组
+
+```java
+class Solution {
+  public int maxProfit(int[] prices, int fee) {
+    int[][] dp = new int[2][2];
+    // dp[i][0] 表示不持有股票
+    // dp[i][1] 表示持有股票
+    dp[0][1] = -prices[0];
+    for (int i = 1; i < prices.length; ++i) {
+      dp[i & 1][0] = Math.max(dp[(i - 1) & 1][0], dp[(i - 1) & 1][1] + prices[i] - fee);
+      dp[i & 1][1] = Math.max(dp[(i - 1) & 1][1], dp[(i - 1) & 1][0] - prices[i]);
+    }
+    return dp[(prices.length - 1) & 1][0];
+  }
+}
+```
+
+### 再优化
+
+```java
+class Solution {
+  public int maxProfit(int[] prices, int fee) {
+    int[] dp = new int[2];
+    // dp[0] 表示不持有股票
+    // dp[1] 表示持有股票
+    dp[1] = -prices[0];
+    for (int i = 1; i < prices.length; ++i) {
+      dp[0] = Math.max(dp[0], dp[1] + prices[i] - fee);
+      dp[1] = Math.max(dp[1], dp[0] - prices[i]);
+    }
+    return dp[0];
+  }
+}
+```
+
+上面的代码优化和[这种动态规划你见过吗——状态机动态规划之股票问题(中)](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247485500&idx=1&sn=f9283ccc6e0c909641eadb9c761f6d1b&chksm=cf0c9435f87b1d23f1361bdd62946d3e6bb79b1415718fd15150bd47215b5ab490510bb51967&token=1092368950&lang=zh_CN#rd)当中的优化原理是一样的。在下面的代码当中，左边的单行数组`dp[0]和dp[1]`相当于二维数组当中的`dp[i][0]，dp[i][1]`，右边的单行数组`dp[0]和dp[1]`相当于二维数组的`dp[i - 1][0]和dp[i - 1][1]`。
+
+```java
+dp[0] = Math.max(dp[0], dp[1] + prices[i] - fee);
+dp[1] = Math.max(dp[1], dp[0] - prices[i]);
+```
+
+但是我们会发现上面代码的第二行会依赖`dp[0]`，这个`dp[0]`是第`i-1`行的状态，但是`dp[0]`在第一行已经发生了更新，也就是说`dp[0]`已经更新到了第`i`行的状态，那么为什么结果是对的呢？我们可以根据下面三条规则进行分析：
+
+- 如果`dp[0]`取的是`dp[0]`，也就是说`dp[0] > dp[1] + prices[i] - fee `，那么`dp[0]`还是上一行的状态，并不影响`dp[1]`的结果。
+- 如果`dp[0]`取的是`dp[1] + prices[i] - fee`，但是`dp[1]`取的是上一行的`dp[1]`那么对结果也没有什么影响。
+- 如果`dp[0]`取的是`dp[1] + prices[i] - fee`而且`dp[1]`取的是`dp[0] - prices[i]`，那么就有影响了，但是这一加一减其实没有意义，还单纯的需要缴纳手续费，最终`dp[0] - prices[i] = dp[1] + prices[i] - fee - prices[i] =  dp[1] - fee < dp[1] `，因此这个状态不会被最终的结果取到，被取到的状态肯定都是第`i-1`行的`dp[1]`（因为`dp[1]`更大），也就是说这个状态又会转移到第二条当中，因此对最终的结果没有影响。
