update state machine summary

--- a/datastructr&algorithm/12状态机动态规划总结.md
+++ b/datastructr&algorithm/12状态机动态规划总结.md
@@ -15,7 +15,7 @@
 | 买卖股票的最佳时机含冷冻期和手续费 | [这种动态规划你见过吗——状态机动态规划之股票问题(下)](买卖股票的最佳时机I和II) |
 |                                    |                                                              |
 
-本篇文章就是对上面6个问题进行总结，这6个问题都是动态规划的问题，因此你可以需要熟悉一下动态规划的套路，在求解动态规划问题的时候通常的步骤有以下几个：
+本篇文章就是对上面6个问题进行汇总方便大家查阅，如果大家想仔细分析这几个问题还是上面三篇文章更合适，内容更加详细。这6个问题都是动态规划的问题，因此你可以需要熟悉一下动态规划的套路，在求解动态规划问题的时候通常的步骤有以下几个：
 
 - 寻找能够表示状态的数组`dp`，即我们需要寻找`dp`的含义，分析需要用几纬数组表示具体的状态。
 - 通过分析问题，寻找动态转移公式。
@@ -419,8 +419,6 @@ $$
             \end{cases}
 $$
 
-### 代码
-
 ```java
 class Solution {
   public int maxProfit(int[] prices, int fee) {
@@ -437,51 +435,3 @@ class Solution {
 }
 ```
 
-### 数组优化——滚动数组
-
-```java
-class Solution {
-  public int maxProfit(int[] prices, int fee) {
-    int[][] dp = new int[2][2];
-    // dp[i][0] 表示不持有股票
-    // dp[i][1] 表示持有股票
-    dp[0][1] = -prices[0];
-    for (int i = 1; i < prices.length; ++i) {
-      dp[i & 1][0] = Math.max(dp[(i - 1) & 1][0], dp[(i - 1) & 1][1] + prices[i] - fee);
-      dp[i & 1][1] = Math.max(dp[(i - 1) & 1][1], dp[(i - 1) & 1][0] - prices[i]);
-    }
-    return dp[(prices.length - 1) & 1][0];
-  }
-}
-```
-
-### 再优化
-
-```java
-class Solution {
-  public int maxProfit(int[] prices, int fee) {
-    int[] dp = new int[2];
-    // dp[0] 表示不持有股票
-    // dp[1] 表示持有股票
-    dp[1] = -prices[0];
-    for (int i = 1; i < prices.length; ++i) {
-      dp[0] = Math.max(dp[0], dp[1] + prices[i] - fee);
-      dp[1] = Math.max(dp[1], dp[0] - prices[i]);
-    }
-    return dp[0];
-  }
-}
-```
-
-上面的代码优化和[这种动态规划你见过吗——状态机动态规划之股票问题(中)](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247485500&idx=1&sn=f9283ccc6e0c909641eadb9c761f6d1b&chksm=cf0c9435f87b1d23f1361bdd62946d3e6bb79b1415718fd15150bd47215b5ab490510bb51967&token=1092368950&lang=zh_CN#rd)当中的优化原理是一样的。在下面的代码当中，左边的单行数组`dp[0]和dp[1]`相当于二维数组当中的`dp[i][0]，dp[i][1]`，右边的单行数组`dp[0]和dp[1]`相当于二维数组的`dp[i - 1][0]和dp[i - 1][1]`。
-
-```java
-dp[0] = Math.max(dp[0], dp[1] + prices[i] - fee);
-dp[1] = Math.max(dp[1], dp[0] - prices[i]);
-```
-
-但是我们会发现上面代码的第二行会依赖`dp[0]`，这个`dp[0]`是第`i-1`行的状态，但是`dp[0]`在第一行已经发生了更新，也就是说`dp[0]`已经更新到了第`i`行的状态，那么为什么结果是对的呢？我们可以根据下面三条规则进行分析：
-
-- 如果`dp[0]`取的是`dp[0]`，也就是说`dp[0] > dp[1] + prices[i] - fee `，那么`dp[0]`还是上一行的状态，并不影响`dp[1]`的结果。
-- 如果`dp[0]`取的是`dp[1] + prices[i] - fee`，但是`dp[1]`取的是上一行的`dp[1]`那么对结果也没有什么影响。
-- 如果`dp[0]`取的是`dp[1] + prices[i] - fee`而且`dp[1]`取的是`dp[0] - prices[i]`，那么就有影响了，但是这一加一减其实没有意义，还单纯的需要缴纳手续费，最终`dp[0] - prices[i] = dp[1] + prices[i] - fee - prices[i] =  dp[1] - fee < dp[1] `，因此这个状态不会被最终的结果取到，被取到的状态肯定都是第`i-1`行的`dp[1]`（因为`dp[1]`更大），也就是说这个状态又会转移到第二条当中，因此对最终的结果没有影响。
