update state machine summary

--- a/datastructr&algorithm/12状态机动态规划总结.md
+++ b/datastructr&algorithm/12状态机动态规划总结.md
@@ -15,7 +15,9 @@
 | 买卖股票的最佳时机含冷冻期和手续费 | [这种动态规划你见过吗——状态机动态规划之股票问题(下)](买卖股票的最佳时机I和II) |
 |                                    |                                                              |
 
-本篇文章就是对上面6个问题进行汇总方便大家查阅，如果大家想仔细分析这几个问题还是上面三篇文章更合适，内容更加详细。这6个问题都是动态规划的问题，因此你可以需要熟悉一下动态规划的套路，在求解动态规划问题的时候通常的步骤有以下几个：
+本篇文章就是对上面6个问题进行汇总方便大家查阅，如果大家想仔细分析这几个问题还是上面三篇文章更合适，内容更加详细，如果你想快速了解**状态机动态规划**，那么这篇文章的状态转移分析应该能够帮助你。
+
+在本文谈到的6个问题都是动态规划的问题，因此你可以需要熟悉一下动态规划的套路，在求解动态规划问题的时候通常的步骤有以下几个：
 
 - 寻找能够表示状态的数组`dp`，即我们需要寻找`dp`的含义，分析需要用几纬数组表示具体的状态。
 - 通过分析问题，寻找动态转移公式。
@@ -182,12 +184,6 @@ class Solution {
 - `dp[N][4]`，表示第N天已经进行过第二次卖出，这个状态可以是在第N天进行买入，也可以是在前面N-1天卖出，然后在第N天保持状态。
   - 如果是在第N天卖出，那么在第N天的收益为`prices[i]`，再加上前N-1天买入两次卖出一次的收益`dp[N][3]`，那么`dp[N][4] = dp[N - 1][3] + prices[i]`。
   - 如果是前N-1天已经买入卖出两次了，那么直接保持前一天的状态即可，即`dp[N][4] = dp[N-1][4]`。
-
-根据上面的分析我们可以得到下面的状态机（状态转移图）：
-
-<img src="../images/dsal/dp/01-dp39.png" alt="01-dp39" style="zoom:80%;" />
-
-相信看到这里你就应该能够理解为什么这种动态规划叫做**状态机动态规划**，因为在这种动态规划当中数据存在很多状态，而我们需要进行仔细的分析，分析清楚这里面的状态该如何进行转移，进而分析出来各种状态之间的转移关系，这种模式跟状态机非常像，因此叫做**状态机动态规划**。
 
 ### 状态转移方程
 
@@ -434,4 +430,18 @@ class Solution {
   }
 }
 ```
+
+## 总结
+
+综合上面6道题目可以发现像这种题目最困难的地方是寻找对状态的定义和状态转移的分析，一旦能够分析出来这一步，那么后续的操作就变得比较简单了，我们只需要按部就班的根据我们定义的状态和状态转移方程用代码进行实现即可，在写出代码之后我们还可以分析数据之间的依赖关系，通过这种依赖关系或许我们还可以进行空间的优化，这个问题就得具体问题具体分析了！！！
+
+---
+
+更多精彩内容合集可访问项目：<https://github.com/Chang-LeHung/CSCore>
+
+关注公众号：**一无是处的研究僧**，了解更多计算机（Java、Python、计算机系统基础、算法与数据结构）知识。
+
+![](https://img2022.cnblogs.com/blog/2519003/202207/2519003-20220703200459566-1837431658.jpg)
+
+
 
