--- a/datastructr&algorithm/12状态机动态规划总结.md
+++ b/datastructr&algorithm/12状态机动态规划总结.md
@@ -2,7 +2,7 @@
 
 ## 前言
 
-在前面的三篇股票问题的文章当中我们一共介绍了6道于股票相关的算法题，这些算法题的一个集中的特点就是状态比较多，需要我们去仔细分析状态之间的转换，而这种状态之间的转换特变像状态机，因此这种动态规划也被称作**状态机动态规划**。
+在前面的三篇股票问题的文章当中我们一共介绍了6道关于股票相关的算法题，这些算法题的一个集中的特点就是状态比较多，需要我们去仔细分析状态之间的转换，而这种状态之间的转换特变像状态机，因此这种动态规划也被称作**状态机动态规划**。
 
 <img src="../images/dsal/dp/01-dp42.png" alt="01-dp42" style="zoom:80%;" />
 
