update complete backpack

--- a/datastructr&algorithm/14深入剖析完全背包.md
+++ b/datastructr&algorithm/14深入剖析完全背包.md
@@ -1,5 +1,7 @@
 # 完全背包转化为多重背包
 
+在本篇文章当中主要给大家介绍如何将完全背包问题转化成多重背包问题，在前面的文章[完全背包](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484544&idx=1&sn=c4de17583010430fa519ecd1703bedea&chksm=cf0c9889f87b119fe5621bacf417b163020dcd8a7c0ed63df94de20ba67ae742b4d86e22ae16&token=883596793&lang=zh_CN#rd)当中，我们仔细的介绍了完全背包的状态转移方程、根据状态转移方程如何完成代码以及多重背包的数组优化的原理，为什么这种优化能够有效！本篇文章主要专注于如何将完全背包转化成多重背包。
+
 ## 完全背包问题
 
 >有$N$种物品和一个容量是 $V$的背包，每种物品都有**无限件可用**。第$i$ 种物品的体积是 $v_i$，价值是$w_i$。求解将哪些物品装入背包，可使这些物品的总体积不超过背包容量，且总价值最大。
@@ -17,3 +19,21 @@
 
 这个问题还是比较简单，我们直接从图中看，我们可以选择五个`A`或者两个`B`一个`A`，可以产生最大的收益，最大收益为10。
 
+## 动态转移方程
+
+在前面的文章[完全背包](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484544&idx=1&sn=c4de17583010430fa519ecd1703bedea&chksm=cf0c9889f87b119fe5621bacf417b163020dcd8a7c0ed63df94de20ba67ae742b4d86e22ae16&token=883596793&lang=zh_CN#rd)当中我们仔细介绍了完全背包的动态转移方程。我们用一个二位数组`dp[i][j]`表示当只使用前`i`个物品切背包容量为`j`的时候，我们能够获取的最大的收益。
+
+和01背包问题一样首先对于第`i`个物品，首先需要判断背包是否能够容纳：
+
+- 如果背包的容量大于等于第`i`个物品的体积，那我们就有两种选择：
+  - 将第`i`个物品放入背包当中，但是在这里需要注意的一点是完全背包的物品有无数件，因此当我们选择之后我们的转移方程为`dp[i][j - v[i]] + w[i]`，这里不是`i-1`而是`i`，因为第`i`件物品有无数件。
+  - 不将第`i`个物品放入背包当中，那么我们就能够使用容量为`j`的背包去选择前`i - 1`个物品，这种情况下我们的最大收益为`dp[i - 1][j]`。
+- 如果背包容量小于第`i`件物品的体积，我们就不能够选择第`i`件物品了，这种情况下我们的最大收益为`dp[i - 1][j]`。
+
+基于上面的分析我们可以知道完全背包问题的动态转移方程为：
+$$
+dp[i][j] = \begin{cases}
+max(dp[i][j - v[i]] + w[i], dp[i - 1][j]), j \ge v[i]\\
+dp[i - 1][j] , j \lt v[i]
+\end{cases}
+$$
