update complete backpack

--- a/datastructr&algorithm/14深入剖析完全背包.md
+++ b/datastructr&algorithm/14深入剖析完全背包.md
@@ -37,3 +37,24 @@ max(dp[i][j - v[i]] + w[i], dp[i - 1][j]), j \ge v[i]\\
 dp[i - 1][j] , j \lt v[i]
 \end{cases}
 $$
+根据上面的状态转移方程，我们的核心代码如下：
+
+```c++
+for (int i = 1; i < N; ++i) {
+    for (int j = 0; j <= V; ++j) {
+        if (j >= v[i]) {
+            dp[i][j] = max(dp[i - 1][j], dp[i][j - v[i]] + w[i]);
+        }
+        else {
+            dp[i][j] = dp[i - 1][j];
+        }
+    }
+}
+```
+
+但是上面的代码我们可以进行数组优化，优化之后的代码如下（如果你还不是很清楚优化原理的话，你可以阅读[完全背包](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484544&idx=1&sn=c4de17583010430fa519ecd1703bedea&chksm=cf0c9889f87b119fe5621bacf417b163020dcd8a7c0ed63df94de20ba67ae742b4d86e22ae16&token=883596793&lang=zh_CN#rd)当中的数组优化小节）：
+
+```java
+
+```
+
