update complete backpack

--- a/datastructr&algorithm/14深入剖析完全背包.md
+++ b/datastructr&algorithm/14深入剖析完全背包.md
@@ -1,6 +1,6 @@
 # 完全背包转化为多重背包
 
-在本篇文章当中主要给大家介绍如何将完全背包问题转化成多重背包问题，在前面的文章[完全背包](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484544&idx=1&sn=c4de17583010430fa519ecd1703bedea&chksm=cf0c9889f87b119fe5621bacf417b163020dcd8a7c0ed63df94de20ba67ae742b4d86e22ae16&token=883596793&lang=zh_CN#rd)当中，我们仔细的介绍了完全背包的状态转移方程、根据状态转移方程如何完成代码以及多重背包的数组优化的原理，为什么这种优化能够有效！本篇文章主要专注于如何将完全背包转化成多重背包。
+在本篇文章当中主要给大家介绍如何将完全背包问题转化成多重背包问题，在前面的文章[完全背包](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484544&idx=1&sn=c4de17583010430fa519ecd1703bedea&chksm=cf0c9889f87b119fe5621bacf417b163020dcd8a7c0ed63df94de20ba67ae742b4d86e22ae16&token=883596793&lang=zh_CN#rd)当中，我们仔细的介绍了完全背包的状态转移方程、根据状态转移方程如何完成代码以及多重背包的数组优化的原理，为什么这种优化能够有效！本篇文章主要专注于如何将完全背包转化成多重背包。如果你还不了解多重背包可以先阅读[深入剖析多重背包问题（上篇）](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484627&idx=1&sn=ac975cb31ba1af89425558cfe4442258&chksm=cf0c98daf87b11cc4178c55864ba8eeecd741aaa49bde712aca1c5999f7dbbbbd0997beb6cc2&token=1311889589&lang=zh_CN#rd)和[深入剖析多重背包问题（下篇）](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484703&idx=1&sn=d0fb3c949b99a803a30a5dd1452d7bce&chksm=cf0c9916f87b10002e32bf8acfa298c1201d33793c80beb538ac099024868373e4c7a5b35a53&token=1311889589&lang=zh_CN#rd)。
 
 ## 完全背包问题
 
@@ -87,12 +87,12 @@ dp[i - 1][j], \\
 dp[i - 1][j - v[i]] + w[i],\\
 dp[i - 1][j - v[i] * 2] + w[i] * 2, \\
 ..., \\
-dp[i - 1][j - v[i] * T] + w[i] * T\\
+dp[i - 1][j - v[i] * T_i] + w[i] * T_i\\
 \}
 $$
-其中 $T = \lfloor\frac{V}{v_i}\rfloor$。
+其中 $T_i = \lfloor\frac{V}{v_i}\rfloor$。
 
-因此完全背包转多重背包的代码如下（进行数组优化之后的代码）：
+因此完全背包转多重背包的代码如下（进行数组优化之后的代码，如果你还不了解数组的优化，哪可以阅读[完全背包](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484544&idx=1&sn=c4de17583010430fa519ecd1703bedea&chksm=cf0c9889f87b119fe5621bacf417b163020dcd8a7c0ed63df94de20ba67ae742b4d86e22ae16&token=883596793&lang=zh_CN#rd)当中数组优化的小节）：
 
 ```C++
 
